--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
@@ -158,7 +158,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-तिसृभिरिति ॥ एकः सृष्टेः प्राक्केवलस्त्वं तिसृभिरवस्थाभिस्त्रैगुण्यमयीभिर्हरिहरब्रह्मस्वरुपाभिर्महिमानं निजशक्तिमुदीरयन्जृम्भयन्प्रलयस्थितिसर्गाणामन्तस्थित्युत्पत्तीनां कारणतां गतः । इदं पश्चाद्भेदमुपेयुषे (2/4) इत्यस्य विवरणमतो न गतार्थत्वदोषः ॥ 2.6 ॥
+तिसृभिरिति ॥ एकः सृष्टेः प्राक्केवलस्त्वं तिसृभिरवस्थाभिस्त्रैगुण्यमयीभिर्हरिहरब्रह्मस्वरूपाभिर्महिमानं निजशक्तिमुदीरयन्जृम्भयन्प्रलयस्थितिसर्गाणामन्तस्थित्युत्पत्तीनां कारणतां गतः । इदं पश्चाद्भेदमुपेयुषे (2/4) इत्यस्य विवरणमतो न गतार्थत्वदोषः ॥ 2.6 ॥
 
 भूतसृष्टिकर्तृत्वमुक्त्वा मिथुनसृष्ट्यर्थ मूर्तिमतो ब्रह्मणो भेदमाह-
 </details>
@@ -208,7 +208,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-स्वकालेति ॥ स्वकालस्य परिमाणेन 'जतुर्युगसहस्त्राणि ब्रह्मणो दिनमुच्यते' इत्युक्तरुपेण व्यस्तं विभक्तं रात्रिंदिवं रात्र्यहनी यस्य तस्य । यद्यपि 'अजतुर-' आदिसूत्रेण रात्रौ च दिवा च रत्रिंदिवमिति सप्तम्यर्थे वृत्तौ द्वन्द्व इत्युक्तं तथापि 'दोषामन्यमहः' 'दिवामन्या रात्रिः' इत्यादौ इवत्राऽपि प्रातिपदिकार्थवृत्तित्वं कथंचित्प्रयोगबलादाश्रयणीयम् । ते तव यौ तु स्वप्नावबोधौ तावेव भूतानां प्रलयोदयौ संहारसृष्टी । यदाहुः- 'यदा स देवो जागर्तिः तदैव चेष्टते जगत् । यदा स्वपिति शान्तात्मा तदा सर्वं प्रलीयते ॥' इति । एतच्च दैवंदिनसृष्टिप्रलयाभिप्रायकं महाप्रलयस्य ब्रह्मणो वर्षशतान्ते भावित्वात् ॥ 2.8 ॥
+स्वकालेति ॥ स्वकालस्य परिमाणेन 'जतुर्युगसहस्त्राणि ब्रह्मणो दिनमुच्यते' इत्युक्तरूपेण व्यस्तं विभक्तं रात्रिंदिवं रात्र्यहनी यस्य तस्य । यद्यपि 'अजतुर-' आदिसूत्रेण रात्रौ च दिवा च रत्रिंदिवमिति सप्तम्यर्थे वृत्तौ द्वन्द्व इत्युक्तं तथापि 'दोषामन्यमहः' 'दिवामन्या रात्रिः' इत्यादौ इवत्राऽपि प्रातिपदिकार्थवृत्तित्वं कथंचित्प्रयोगबलादाश्रयणीयम् । ते तव यौ तु स्वप्नावबोधौ तावेव भूतानां प्रलयोदयौ संहारसृष्टी । यदाहुः- 'यदा स देवो जागर्तिः तदैव चेष्टते जगत् । यदा स्वपिति शान्तात्मा तदा सर्वं प्रलीयते ॥' इति । एतच्च दैवंदिनसृष्टिप्रलयाभिप्रायकं महाप्रलयस्य ब्रह्मणो वर्षशतान्ते भावित्वात् ॥ 2.8 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -258,7 +258,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-आत्मानमिति ॥ हे भगवन्, त्वमात्मानं लोकानुग्रहार्थं ब्रह्मरुपेणोत्पिपादयिषितं स्वस्वरुपमात्मनैव वेत्सि जानासि । सर्वापि क्रिया कर्तव्यार्थज्ञानपूर्विकेति भावः । तथात्मानमात्मनैव । आत्मन्येवेत्यत्रापि संबध्यते । स्वस्मिन्नेव सृजसि । अधिष्ठानमपि स्वयमेवेत्यर्थः । 'स्वेमहिम्नि प्रतिष्ठिनम्' इति श्रुतेः । कृतिना समर्थेन । इदं सर्वत्र सम्बध्यते । आत्मना स्वेनैवात्मन्येव प्रलीयसे स्वस्मिन्नेव' प्रलीनो भवसि । लीयतेर्दैवादिकात्कर्तरि लट् । 'प्रकृत्यादिभ्य उपसंख्यानम्' इति वार्तिकात्सर्वत्रात्मनेति तृतिया । न हि ते प्रपञ्चस्येव ज्ञानोत्पत्तिलयेषु परापेक्षेति फलितार्थः ।
+आत्मानमिति ॥ हे भगवन्, त्वमात्मानं लोकानुग्रहार्थं ब्रह्मरूपेणोत्पिपादयिषितं स्वस्वरूपमात्मनैव वेत्सि जानासि । सर्वापि क्रिया कर्तव्यार्थज्ञानपूर्विकेति भावः । तथात्मानमात्मनैव । आत्मन्येवेत्यत्रापि संबध्यते । स्वस्मिन्नेव सृजसि । अधिष्ठानमपि स्वयमेवेत्यर्थः । 'स्वेमहिम्नि प्रतिष्ठिनम्' इति श्रुतेः । कृतिना समर्थेन । इदं सर्वत्र सम्बध्यते । आत्मना स्वेनैवात्मन्येव प्रलीयसे स्वस्मिन्नेव' प्रलीनो भवसि । लीयतेर्दैवादिकात्कर्तरि लट् । 'प्रकृत्यादिभ्य उपसंख्यानम्' इति वार्तिकात्सर्वत्रात्मनेति तृतिया । न हि ते प्रपञ्चस्येव ज्ञानोत्पत्तिलयेषु परापेक्षेति फलितार्थः ।
 </details>
 
 
@@ -285,7 +285,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-द्रव इति ॥ त्वमित्यनुषज्यते । हे भगवन्, त्वं द्रवाः सिरित्समुद्रादिवद्रसात्मकोऽसि । संघातेन निबिडसंयोगेन कठिनो महीधरादिवत् । स्थूल इन्द्रियग्रहणयोग्यो घटादिवत् । सूक्ष्मोऽतीन्द्रियः परमाण्वादिवत् । लधुरुत्पतनयोग्यस्तूलादिवत् । गुरुर्हेमाद्रिवदचलनीयः । व्यक्तः कार्यंरुपोऽसि । व्यक्तेतरः कारणरुपश्चासि । एव विभूतिष्वणिमादिषु ते तव । प्रकामस्य भावः प्रकाम्यं यथाकामत्वम् ॥ 2.11 ॥
+द्रव इति ॥ त्वमित्यनुषज्यते । हे भगवन्, त्वं द्रवाः सिरित्समुद्रादिवद्रसात्मकोऽसि । संघातेन निबिडसंयोगेन कठिनो महीधरादिवत् । स्थूल इन्द्रियग्रहणयोग्यो घटादिवत् । सूक्ष्मोऽतीन्द्रियः परमाण्वादिवत् । लधुरुत्पतनयोग्यस्तूलादिवत् । गुरुर्हेमाद्रिवदचलनीयः । व्यक्तः कार्यरूपोऽसि । व्यक्तेतरः कारणरूपश्चासि । एव विभूतिष्वणिमादिषु ते तव । प्रकामस्य भावः प्रकाम्यं यथाकामत्वम् ॥ 2.11 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -342,7 +342,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-त्वामिति ॥ हे भगवन्, त्वां पुरुषस्यार्थो भोगापवर्गरुपस्तदर्थ प्रवर्तत इति पुरुषार्थप्रवर्तिनीं तां प्रकृतिं त्रैगुण्यात्मकं मूलकारणम् । 'प्रकृतिः पञ्चभूतेषु प्रधाने मूलकारणम्' । इति यादवः । आमनन्ति कथयन्ति । 'म्ना अभ्यासे' इति धातोर्लट् । 'पाघ्राध्मास्थाम्ना-' इत्यादिना मनादेशः । प्रकृतिपुरुषभेदाग्रहणात्प्रकृतिपुरुषाभेदव्यपदेशः । त्वामेव तां प्रकृतिं साक्षित्वेन पस्यतीति तद्दर्शिनमुदासीनं कूटस्थं पुरुषं विदुर्विदन्ति । 'विदो लटो वा' इति झेर्जुसादेशः । 'अजामेकां लोहितशुक्लकृष्णाम्' इति श्रुतिरत्र प्रमाणम् ॥ 2.13 ॥
+त्वामिति ॥ हे भगवन्, त्वां पुरुषस्यार्थो भोगापवर्गरूपस्तदर्थं प्रवर्तत इति पुरुषार्थप्रवर्तिनीं तां प्रकृतिं त्रैगुण्यात्मकं मूलकारणम् । 'प्रकृतिः पञ्चभूतेषु प्रधाने मूलकारणम्' । इति यादवः । आमनन्ति कथयन्ति । 'म्ना अभ्यासे' इति धातोर्लट् । 'पाघ्राध्मास्थाम्ना-' इत्यादिना मनादेशः । प्रकृतिपुरुषभेदाग्रहणात्प्रकृतिपुरुषाभेदव्यपदेशः । त्वामेव तां प्रकृतिं साक्षित्वेन पस्यतीति तद्दर्शिनमुदासीनं कूटस्थं पुरुषं विदुर्विदन्ति । 'विदो लटो वा' इति झेर्जुसादेशः । 'अजामेकां लोहितशुक्लकृष्णाम्' इति श्रुतिरत्र प्रमाणम् ॥ 2.13 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -621,7 +621,7 @@ title = "०२"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पर्याकुलत्वान् मरुतां  
-**वेगभङ्गो ऽनुमीयते** ।  
+**वेग-भङ्गो ऽनुमीयते** ।  
 अम्भसाम् ओघ-संरोधः  
 प्रतीप-गमनाद् इव ॥ 2.25 ॥+++(5)+++  
 </details>
@@ -649,7 +649,7 @@ title = "०२"
 आवर्जित-जटा-मौलि-  
 विलम्बि-शशि-कोटयः ।  
 रुद्राणाम् अपि **मुर्धानः**  
-**क्षत-हुङ्कारशंसिनः** ॥ 2.26 ॥  
+**क्षत-हुङ्कार-शंसिनः** ॥ 2.26 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -673,7 +673,7 @@ title = "०२"
 लब्ध-प्रतिष्ठाः प्रथमं  
 यूयं **किं** बलवत्तरैः ।  
 अपवादैर् इवोत्सर्गाः  
-**कृतव्यावृत्तयः** परैः ॥ 2.27 ॥  +++(5)+++
+**कृत-व्यावृत्तयः** परैः ॥ 2.27 ॥  +++(5)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -716,13 +716,13 @@ title = "०२"
 तदिति ॥ तत्तस्मात्कारणात् ।हे वत्साः पुत्रकाः । 'वत्सस्त्वर्भकपुत्राद्योर्वर्षे वत्सं तु वक्षसि' इति विश्वः । स्वयं पितामहत्वाद्वत्सा इत्यामन्त्रयते । संभूयागताः समागताः इतो मत्तः किं प्रार्थयध्वम् । किमिच्छतेत्यर्थः । ब्रूत । लोकरक्षणे यूयमेव कर्तार इत्याह- मयि लोकानां सृष्टी रक्षा युष्मास्ववस्थिता । अतस्तदर्थमपि नस्ति मदपेक्षेत्यर्थः ॥ 2.28 ॥
 </details>
 
-## प्रतिस्पन्दः
+## वेदनाकथनम्
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो मन्दानिलोद्‌धूत-  
 कमलाकर-शोभिना ।  
 गुरुं नेत्र-सहस्त्रेण  
-नोदयामास वासवः ॥ 2.29 ॥+++(5)+++  
+नोदयाम् आस वासवः ॥ 2.29 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -743,9 +743,9 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स द्विनेत्रो हरेश् चक्षुः  
+स द्वि-नेत्रो हरेश् चक्षुः  
 सहस्र-नयनाधिकम् ।  
-वाचस्पतिर् **उवाचेदं**  
+वाचस्-पतिर् **उवाचेदं**  
 प्राञ्जलिर् जलजासनम् ॥ 2.30 ॥+++(5)+++  
 </details>
 
@@ -767,8 +767,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-एवं यदात्थ भगवन्नामृष्टं नः परैः पदम् ।  
-प्रत्येकं विनियुक्तात्मा कथं न ज्ञास्यसि प्रभो ॥ 2.31 ॥  
+एवं यद् आत्थ भगवन्न्  
+**आमृष्टं** नः परैः **पदम्** ।  
+प्रत्येकं विनियुक्तात्मा  
+**कथं न ज्ञास्यसि** प्रभो ॥ 2.31 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -785,20 +787,22 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 ऐवमिति ॥ हे भगनम् षड्गुणैश्वर्यसम्पन्न ! यदात्थ 'कृतव्यावृत्तयः परैः' (2/26) इति यद्‌व्रवीषि । 'ब्रुवः पञ्चानाम्-' इतयादिनाहादेशः । 'वर्तमानसामीप्य वर्तमानवद्वा' इति वर्तमानप्रयोगः । वामनस्तु भ्रान्तोऽयं प्रयोग ईत्याह । आहेति भूते णलन्तभ्रमवदिति । आहेत्युपलक्षणम् । तदेव सत्यम् नोऽस्माकं पदमधिकारः परैः शत्रुभिरामृष्टमाक्षित्पम् । हे प्रभो, प्रत्येकं प्रतिपुरुषं विनियुक्तात्मा प्रवेशितस्वरुपः । सर्वान्तर्यामीत्यर्थः । कथं न ज्ञास्यसि न वेत्सि । वर्तमानेऽपि वचनभङ्ग्या भविष्यन्निर्देशः प्रसिद्धः । 'अपन्हवे ज्ञः' 'अकर्मकाच्च' इत्यात्मनेपदविकल्पः ॥ 2.31 ॥
+
+उक्तमेव प्रपञ्चयति-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उक्तमेव प्रपञ्चयति-  
-भवल्लब्धवरोदीर्णस्तारकाख्यो महासुरः ।  
-उपप्लवाय लोकानां धूमकेतुरिबोत्थितः ॥ 2.32 ॥  
+भवल्-लब्ध-वरोदीर्णस्  
+तारकाख्यो महासुरः ।  
+उपप्लवाय लोकानां  
+धूमकेतुर् इवोत्थितः ॥ 2.32 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-उक्तमेव प्रपञ्चयति-  
 भवल्लब्धवरोदीर्णस्तारकाख्यो महासुरः ।  
-उपप्लवाय लोकानां धूमकेतुरिबोत्थितः ॥ 2.32 ॥  
+उपप्लवाय लोकानां धूमकेतुरिवोत्थितः ॥ २।३२॥
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -813,8 +817,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पुरे तावन्तमेवास्य तनोति रविरातपम् ।  
-दीर्घिकाकमलोन्मेषो यावन्मात्रेण साध्यते ॥ 2.33 ॥  
+पुरे तावन्तम् एवास्य  
+**तनोति** रविर् **आतपम्** ।  
+दीर्घिका-कमलोन्मेषो  
+यावन्-मात्रेण साध्यते ॥ 2.33 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -835,8 +841,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सर्वाभिः सर्वदा चन्द्रस्तं कलाभिर्निषेवते ।  
-नादत्ते केवलां लेखां हरचूडामणीकृताम् ॥ 2.34 ॥  
+सर्वाभिः सर्वदा **चन्द्रस्**  
+तं कलाभिर् **निषेवते** ।  
+नादत्ते केवलां लेखां  
+हर-चूडा-मणी-कृताम् ॥ 2.34 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -857,8 +865,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-व्यावृत्तगतिरुद्याने कुसुमस्तेयसाध्वसात् ।  
-न वाति वायुस्तत्पार्श्वे तालवृन्तानिलाधिकम् ॥ 2.35 ॥  
+व्यावृत्त-गतिर् उद्याने  
+कुसुम-स्तेय-साध्वसात्+++(=भयात्)+++ ।  
+**न वाति** वायुस् तत्-पार्श्वे  
+ताल-वृन्त+++(=बन्ध→व्यजन)++++अनिलाधिकम् ॥ 2.35 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -874,13 +884,15 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-व्यावृत्तेति ॥ वायुः स्तेनस्य भावः कर्म वा स्तेयं चौर्यम् । 'स्तेनाद्यन्नलोपश्च' इति यत्प्रत्ययो नलोपश्च । कुसुमानां स्तेयं तस्मत्स्तेयाभियोगाद्द्ण्डाद्वा साध्वसं भयं तस्माद्धेतोरुद्याने व्यावृत्तगतिः । निवृत्तोद्यानसंचारः सन्नित्यर्थः । सापेक्षत्वेऽपि गमकत्वात् समासः । तत्पार्श्वे तत्समीपे । तालस्य वृन्तैरुद्ग्रन्थ्यते । तालस्येव वृन्तमस्येति वा तालवृन्तं तस्यानिलात्‌व्यजनसंचारपवनादधिकं यथा तथा न वाति । 'व्यजनं तालवृन्तकम्' इत्यमरः ॥ 2.35 ॥
+व्यावृत्तेति ॥ वायुः स्तेनस्य भावः कर्म वा स्तेयं चौर्यम् । 'स्तेनाद्यन्नलोपश्च' इति यत्प्रत्ययो नलोपश्च । कुसुमानां स्तेयं तस्मत्स्तेयाभियोगाद्द्ण्डाद्वा साध्वसं भयं तस्माद्धेतोरुद्याने व्यावृत्तगतिः । निवृत्तोद्यानसंचारः सन्नित्यर्थः । सापेक्षत्वेऽपि गमकत्वात् समासः । तत्पार्श्वे तत्समीपे । तालस्य वृन्तैरुद्ग्रन्थ्यते । तालस्येव वृन्तम् अस्येति वा **तालवृन्तं** तस्यानिलात् ‌व्यजन-संचार-पवनाद् अधिकं यथा तथा न वाति । 'व्यजनं तालवृन्तकम्' इत्यमरः ॥ 2.35 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पर्यायसेवामुत्सृज्य पुष्पसंभारतत्पराः ।  
-उद्यानपालसामान्यमृतवस्तमुपासते ॥ 2.36 ॥  
+पर्याय-सेवाम् उत्सृज्य  
+पुष्प-संभार--तत्-पराः ।  
+उद्यान-पाल-सामान्यम्  
+ऋतवस् तम् **उपासते** ॥ 2.36 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -901,14 +913,16 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्योपायनयोग्यानि रत्नानि सरितां पतिः ।  
-सथमप्यम्भसामन्तरानिष्पत्तेः प्रतीक्षते ॥ 2.37 ॥  
+तस्योपायन-योग्यानि  
+रत्नानि सरितां पतिः ।  
+कथम् अप्य् अम्भसाम् अन्तर्  
+**आ निष्पत्तेः प्रतीक्षते** ॥ 2.37 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तस्योपायनयोग्यानि रत्नानि सरितां पतिः ।  
-सथमप्यम्भसामन्तरानिष्पत्तेः प्रतीक्षते ॥ 2.37 ॥  
+कथमप्यम्भसामन्तरा निष्पत्तेः प्रतीक्षते ॥ 2.37 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -923,8 +937,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-ज्वलन्मणिशिखाश्चैनं वासुकिप्रमुखा निशि ।  
-स्थिरप्रदीपतामेत्य भुजङ्गाः पर्युपासते ॥ 2.38 ॥  
+ज्वलन्-मणि-शिखाश् चैनं  
+वासुकि-प्रमुखा निशि ।  
+स्थिर-प्रदीपताम् एत्य  
+**भुजङ्गाः पर्युपासते** ॥ 2.38 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -945,8 +961,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तत्कृतानुग्रहापेक्षी तं मुहुर्दूतहारितैः ।  
-अनुकूलयतीन्द्रोऽपि कल्पद्रुमविभूषणैः ॥ 2.39 ॥  
+तत्-कृतानुग्रहापेक्षी  
+तं मुहुर् दूत-हारितैः ।  
+**अनुकूलयतीन्द्रोऽपि**  
+कल्पद्रुम-विभूषणैः ॥ 2.39 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -967,14 +985,16 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इत्थमाराध्यमानोऽपि क्लिश्नाति भुवनत्रयम् ।  
-शाम्योत्प्रत्यपकारेण नोपकारेण दुर्जनः ॥ 2.40 ॥  
+इत्थम् आराध्यमानोऽपि  
+क्लिश्नाति भुवनत्रयम् ।  
+शाम्येत्प्रत्यपकारेण  
+नोपकारेण दुर्जनः ॥ 2.40 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
 इत्थमाराध्यमानोऽपि क्लिश्नाति भुवनत्रयम् ।  
-शाम्योत्प्रत्यपकारेण नोपकारेण दुर्जनः ॥ 2.40 ॥  
+शाम्येत्प्रत्यपकारेण नोपकारेण दुर्जनः ॥ 2.40 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -989,8 +1009,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तेनामरवधूहस्तैः सदयालूनपल्लवाः ।  
-अभिज्ञाश्छेदपातानां क्रियन्ते नन्दनद्रुमाः ॥ 2.41 ॥  
+तेनामर-वधू-हस्तैः  
+स-दय+अलून-पल्लवाः ।  
+**अभिज्ञाश्** छेद-पातानां  
+**क्रियन्ते** नन्दन-द्रुमाः ॥ 2.41 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1011,8 +1033,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-वीज्यते स हि संसुप्तः श्वाससाधारणानिलैः ।  
-चामरैः सुरवन्दीनां वाष्पसीकरवर्षिभिः ॥ 2.42 ॥  
+**वीज्यते स** हि संसुप्तः  
+श्वास-साधारणानिलैः ।  
+चामरैः सुर-वन्दीनां+++(←वन्द् [स्त्रीणां])+++  
+वाष्प-सीकर-वर्षिभिः ॥ 2.42 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1033,8 +1057,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उत्पाट्य मेरुश्रृङ्गाणि क्षुण्णानि हरितां खुरैः ।  
-आक्रीडपर्वतास्तेन कल्पिताः स्वेषु वेश्मसु ॥ 2.43 ॥  
+उत्पाट्य मेरु-श्रृङ्गाणि  
+क्षुण्णानि हरितां+++(=सूर्याश्वनाम्)+++ खुरैः ।  
+**आक्रीड-पर्वतास्** तेन  
+**कल्पिताः** स्वेषु वेश्मसु ॥ 2.43 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1050,18 +1076,20 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-उत्पाट्येति ॥ तेन तारकेण हरितां सूर्याश्वनाम् । 'हरित्सूर्ये च सूर्याश्वे वर्णे च हरिते दिशि' इति वेश्वः । खुरैः शफैः क्षुण्णानि चूर्णितानि । एतेन तेषामत्यौन्नत्यं सूचितम् । मेरुश्रृङ्गाण्युत्पाट्य स्वेषु वेश्मसु । वैश्मस्विति बहुवचनेनास्य भुवनत्रयनिवासः सूचितः । आक्रीडन्त एष्वित्याक्रीडाः । ते च पर्वताः कल्पताः कृताः ॥ 2.43 ॥
+उत्पाट्येति ॥ तेन तारकेण **हरितां** सूर्याश्वनाम् । 'हरित्सूर्ये च सूर्याश्वे वर्णे च हरिते दिशि' इति वेश्वः । खुरैः शफैः क्षुण्णानि चूर्णितानि । एतेन तेषामत्यौन्नत्यं सूचितम् । मेरुश्रृङ्गाण्युत्पाट्य स्वेषु वेश्मसु । वैश्मस्विति बहुवचनेनास्य भुवनत्रयनिवासः सूचितः । आक्रीडन्त एष्वित्याक्रीडाः । ते च पर्वताः कल्पताः कृताः ॥ 2.43 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-मन्दाकिन्याः पयः शेषं दिग्वारणमदाविलम् ।  
-हेमाम्भोरुहसस्यानां तद्वाप्यो धाम् सांप्रतम् ॥ 2.44 ॥  
+मन्दाकिन्याः पयःशेषं  
+दिग्-वारण-मदाविलम् ।  
+हेमाम्भो-रुह-सस्यानां  
+**तद्-वाप्यो धाम्** सांप्रतम् ॥ 2.44 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-मन्दाकिन्याः पयः शेषं दिग्वारणमदाविलम् ।  
+मन्दाकिन्याः पयःशेषं दिग्वारणमदाविलम् ।  
 हेमाम्भोरुहसस्यानां तद्वाप्यो धाम् सांप्रतम् ॥ 2.44 ॥  
 </details>
 
@@ -1077,14 +1105,16 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भुवनालोकनप्रीतिः स्वर्गिभिर्नानुभूयते ।  
-खिलोभूते विमानानां तदापातभयात्पथि ॥ 2.45 ॥  
+भुवनालोकन-प्रीतिः  
+स्वर्गिभिर् **नानुभूयते** ।  
+खिली+++(=कृशी)+++-भूते विमानानां  
+तद्-आपात-भयात् पथि ॥ 2.45 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 भुवनालोकनप्रीतिः स्वर्गिभिर्नानुभूयते ।  
-खिलोभूते विमानानां तदापातभयात्पथि ॥ 2.45 ॥  
+खिलीभूते विमानानां तदापातभयात्पथि ॥ 2.45 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1094,13 +1124,20 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-भुवनेति ॥ तस्य तारकस्यापातात्समापत्तेर्भयाद्विमानानां पथि खिलोभूतेऽप्रहतीभूते सति । 'द्वे खिलाप्रहते समे' इत्यमरः । स्वर्गिभिर्देवैभुवनानामालोकने प्रीतिर्नानुभूयते ॥ 2.45 ॥
+भुवनेति ॥ तस्य तारकस्यापातात् समापत्तेर् भयाद् **विमानानां** पथि **खिली-भूते** ऽप्रहतीभूते सति ।  
+'द्वे खिलाप्रहते समे' इत्यमरः ।  
+**स्वर्गिभिर्** देवैर् भुवनानामालोकने प्रीतिर् नानुभूयते ॥ 2.45 ॥
 </details>
+
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga02-46to64.mp3"></div>
+
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यज्वभिः संभृतं हव्यं विततेष्वध्वरेषु सः ।  
-जातवेदोमुखान्मायी मिषतामाच्छिनत्ति नः ॥ 2.46 ॥  
+यज्वभिः संभृतं **हव्यं**  
+विततेष्व् अध्वरेषु सः ।  
+जातवेदो-मुखान् मायी  
++++(नेत्राणां)+++ मिषताम् **आच्छिनत्ति** नः ॥ 2.46 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1116,13 +1153,15 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-यज्वभिरिति ॥ यज्वभिर्विधिवदिष्टवद्भिः 'यज्वा तु विधिनेष्टवान्' इत्यमरः । 'सुयजोर्ङ्वनिप्' इति ङ्वनिप्प्रत्ययः । विततेष्वध्वरेषु यज्ञेषु संभृतं दत्तं हव्यं हविर्मायी मायावी । व्रीह्यादित्वादि निप्रत्ययः । स तारको नोऽस्माकं मिषतां पश्यताम् । पश्यत्सु सत्स्वित्यर्थः । 'षष्ठी चानादरे' इति षष्ठी । जातवेदा वह्निरेव मुशं तस्माज्जातवेदोमुखादाच्छिनत्ति । आक्षिप्य गुह्णातीत्यर्थः ॥ 2.46 ॥
+यज्वभिरिति ॥ यज्वभिर्विधिवदिष्टवद्भिः 'यज्वा तु विधिनेष्टवान्' इत्यमरः । 'सुयजोर्ङ्वनिप्' इति ङ्वनिप्प्रत्ययः । विततेष्वध्वरेषु यज्ञेषु संभृतं दत्तं हव्यं हविर्मायी मायावी । व्रीह्यादित्वादि निप्रत्ययः । स तारको नोऽस्माकं **मिषतां** पश्यताम् । पश्यत्सु सत्स्वित्यर्थः । 'षष्ठी चानादरे' इति षष्ठी । जातवेदा वह्निरेव मुशं तस्माज्जातवेदोमुखादाच्छिनत्ति । आक्षिप्य गुह्णातीत्यर्थः ॥ 2.46 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उच्चैरुच्चैःश्रवास्तेन हयरत्नमहारि च ।  
-देहबद्धमिवेन्द्रस्य चिरकालार्जितं यशः ॥ 2.47 ॥  
+उच्चैर् उच्चैःश्रवास् तेन  
+हय-रत्नम् **अहारि** च ।  
+देह-बद्धम् इवेन्द्रस्य  
+चिर-कालार्जितं यशः ॥ 2.47 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1139,18 +1178,20 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 उच्चैरिति ॥ किंचेति चार्थः । तेन तारकेणोच्चैरुन्नत उच्चैः श्रवा नाम हयो रत्नमिव हयरत्नमश्वश्रेष्ठः 'रत्नश्रेष्ठे मणावपि' इति विश्वः । अस्य शुभ्रत्वादुत्प्रेक्षतेः-देहबद्धं बद्धदेहम् । मूर्तिमदित्यर्थः । आहिताग्न्यादित्नान्निष्ठायाः परानिपातः । चिरकालार्जितमिन्द्रस्य यश इवाहार्यपहृतम् ॥ 2.47 ॥
+
+तर्हि सामाद्युपायास्तत्र कथं न प्रयुक्ता इत्यत्राह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तर्हि सामाद्युपायास्तत्र कथं न प्रयुक्ता इत्यत्राह-  
-तस्मिन्नुपायाः सर्वे नः क्रूरे प्रतिहतक्रियाः ।  
-वीर्यवन्त्यौषधानीव विकारे सांनिपातिके ॥ 2.48 ॥  
+तस्मिन्न् **उपायाः** सर्वे नः  
+क्रूरे **प्रतिहत-क्रियाः** ।  
+वीर्यवन्त्य् औषधानीव  
+विकारे सांनिपातिके ॥ 2.48 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तर्हि सामाद्युपायास्तत्र कथं न प्रयुक्ता इत्यत्राह-  
 तस्मिन्नुपायाः सर्वे नः क्रूरे प्रतिहतक्रियाः ।  
 वीर्यवन्त्यौषधानीव विकारे सांनिपातिके ॥ 2.48 ॥  
 </details>
@@ -1167,8 +1208,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-जयाशा यत्र चास्माकं प्रतिघातोत्थितार्चिषा ।  
-हरिचक्रेण तेनास्य कण्ठे निष्कमिवार्पितम् ॥ 2.49 ॥  
+जयाशा यत्र चास्माकं  
+प्रतिघातोत्थितार्चिषा ।  
+हरि-चक्रेण तेनास्य  
+कण्ठे **निष्कम् इवार्पितम्** ॥ 2.49 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1184,19 +1227,21 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-जयाशेति ॥ किंचेति चार्थः । नूनमनेन वयं जेष्याम इति यत्र हरिचक्रेऽस्माकं जयाशा विजयाशंसा । आसीदिति शेषः । प्रतिघातेन प्रतिहत्योत्थितार्चिषोद्‌गततेजसा तेन हरिचक्रेण विष्णोः सुदर्शनेनास्य तारकस्य कण्ठे निष्कमुरोभूषणमप्रितमिवेप्युत्प्रेक्षा । स्वयमयं निष्कमिव स्थितमित्यर्थः । तारकशिरश्छेदाय हरिणा चक्रं त्यक्तं तदपि नष्टशक्ति जातमिति भावः । 'साष्टे शते सुवर्णानां हेम्न्युरोभूषणेपले । दीनारेऽपि च निष्केऽस्त्री' इत्यमरः ॥ 2.49 ॥
+जयाशेति ॥ किंचेति चार्थः । नूनमनेन वयं जेष्याम इति यत्र हरिचक्रेऽस्माकं जयाशा विजयाशंसा । आसीदिति शेषः । **प्रतिघातेन** प्रतिहत्योत्थितार्चिषोद्‌गततेजसा तेन **हरिचक्रेण** विष्णोः सुदर्शनेनास्य तारकस्य **कण्ठे** **निष्कम्** उरोभूषणम् अर्पितमिवेप्युत्प्रेक्षा । स्वयमयं निष्कमिव स्थितमित्यर्थः । तारकशिरश्छेदाय हरिणा चक्रं त्यक्तं तदपि नष्टशक्ति जातमिति भावः । 'साष्टे शते सुवर्णानां हेम्न्युरोभूषणेपले । दीनारेऽपि च निष्केऽस्त्री' इत्यमरः ॥ 2.49 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तदीयास्तोयदेष्वद्य पुष्करावर्तकादिषु ।  
-अभ्यस्यन्ति तटाघात निर्जितैरावता गजाः ॥ 2.50 ॥  
+तदीयास् तोयदेष्व् अद्य  
+पुष्करावर्तकादिषु ।  
+**अभ्यस्यन्ति** तटाघातं  
+निर्जितैरावता **गजाः** ॥ 2.50 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तदीयास्तोयदेष्वद्य पुष्करावर्तकादिषु ।  
-अभ्यस्यन्ति तटाघात निर्जितैरावता गजाः ॥ 2.50 ॥  
+अभ्यस्यन्ति तटाघातं निर्जितैरावता गजाः ॥ 2.50 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1211,13 +1256,15 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तदिच्छामो विभो ! स्त्रष्टुं सेनान्यं तस्य शान्तये ।  
-कर्मबन्धच्छिदं धर्मं भवस्येव मुमुक्षवः ॥ 2.51 ॥  
+तद् **इच्छामो** विभो ! सृष्टं  
+**सेनान्यं** तस्य शान्तये ।  
+कर्म-बन्ध-च्छिदं धर्मं  
+भवस्येव मुमुक्षवः ॥ 2.51 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तदिच्छामो विभो ! स्त्रष्टुं सेनान्यं तस्य शान्तये ।  
+तदिच्छामो विभो ! सृष्टं सेनान्यं तस्य शान्तये ।  
 कर्मबन्धच्छिदं धर्मं भवस्येव मुमुक्षवः ॥ 2.51 ॥  
 </details>
 
@@ -1229,19 +1276,21 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 तदिति ॥ तत्तस्मात्कारणात् । हे विभो स्वामिन्, मोक्तुं भवं त्यक्तुमिच्छवो मुमुक्षवो विरक्ता भवस्य संसारस्य शान्तयो निवृत्तये कर्मैव बन्धस्तं छिनतीति कर्मबन्धच्छत्तं धर्ममिव । आत्मज्ञानहेतुभूतमिति शेषः । 'तमेव विदित्वातिमृत्युमेति' इति ज्ञानादेव मुक्तिः । तस्य तारकस्य शान्तये नाशाय । सेनां नयतीति सेनानीश्चमूपतिः । 'सत्सूद्विष-' इत्यादिना क्विप् । तं सेनान्यं कंचित्स्त्रष्टुमिच्छामः । वयमिति शेषः ॥ 2.51 ॥
+
+सेनानीसृष्टेः फलमाह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सेनानीसृष्टेः फलमाह-  
-गोत्पारं सुरसैन्यानां यं पुरस्कृत्य गौत्रभित् ।  
-प्रत्यानेष्यति शत्रुभ्यो वन्दीमिव जयश्रियम् ॥ 2.52 ॥  
+गोत्पारं सुरसैन्यानां  
+यं **पुरस्-कृत्य** गोत्रभित् ।  
+**प्रत्यानेष्यति** शत्रुभ्यो  
+वन्दीम्+++(←वन्द्)+++ इव जयश्रियम् ॥ 2.52 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सेनानीसृष्टेः फलमाह-  
-गोत्पारं सुरसैन्यानां यं पुरस्कृत्य गौत्रभित् ।  
+गोत्पारं सुरसैन्यानां यं पुरस्कृत्य गोत्रभित् ।  
 प्रत्यानेष्यति शत्रुभ्यो वन्दीमिव जयश्रियम् ॥ 2.52 ॥  
 </details>
 
@@ -1255,10 +1304,13 @@ title = "०२"
 गोत्पारमिति ॥ सिरसैन्यानां देवतासेनानां गोत्पारं रक्षितारं यं सेनान्यं पुरस्कृत्य पुरोधाय । 'पुरोऽत्र्ययम्' इति गतित्वात् 'नमस्पुरसोर्गत्योः' इति सकारः । गां पृथ्वीं त्रायन्त इति गोत्रास्तान्भिनत्तीति गोत्रभिदिन्द्रो जयश्रियं बन्दीमिव बन्दीकृतां स्त्रियमिव शत्रुभ्यः सकाशात्प्रत्यानेष्यति प्रत्याहरिष्यति तं स्त्रष्टुमिति पूर्वेण संबन्धः ॥ 2.52 ॥
 </details>
 
+## उत्तरम्
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-वचस्यवसिते तस्मिन्ससर्ज गिरमात्मभूः ।  
-गर्जितानन्तरां वृष्टिं सौभाग्येन जिगाय सा ॥ 2.53 ॥  
+वचस्य् अवसिते तस्मिन्  
+**ससर्ज गिरम्** आत्म-भूः ।  
+गर्जितानन्तरां वृष्टिं  
+सौभाग्येन जिगाय+++(=जितवती)+++ सा ॥ 2.53 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1274,13 +1326,15 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-वचसीति ॥ तस्मिन्बार्हस्पत्ये वचस्यवसिते परिसमाप्ते सत्यात्मभूर्ब्रह्मा गिरं वाचं ससर्ज जगादेत्यर्थः । सा गीः सौभाग्येन मनोहरत्वेन । 'हृद्‌भगसिन्ध्वन्ते पूर्वपदस्य च' इत्युभयपदवृद्धिः गर्जिताद्‌गर्जितस्य वानन्तरं प्रवृत्तां वृष्टिं जिगाय जितवती । गर्जितपरत्वाद्‌वृष्टेरिव तद्विज्ञापनफलत्वाद्‌गिरः सुभगत्वमिति भावः ॥ 2.53 ॥
+वचसीति ॥ तस्मिन्बार्हस्पत्ये वचस्यवसिते परिसमाप्ते सत्यात्मभूर्ब्रह्मा गिरं वाचं ससर्ज जगादेत्यर्थः । सा गीः सौभाग्येन मनोहरत्वेन । 'हृद्‌भगसिन्ध्वन्ते पूर्वपदस्य च' इत्युभयपदवृद्धिः गर्जिताद्‌गर्जितस्य वानन्तरं प्रवृत्तां वृष्टिं **जिगाय** जितवती । गर्जितपरत्वाद्‌वृष्टेरिव तद्विज्ञापनफलत्वाद्‌गिरः सुभगत्वमिति भावः ॥ 2.53 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-संपत्स्यते वः कामोऽयं कालः सश्चित्प्रतीक्ष्यताम् ।  
-न त्वस्य सिद्धौ यास्यामि सर्गव्यापारमात्मना ॥ 2.54 ॥  
+**संपत्स्यते** वः कामोऽयं  
+कालः कश्चित् **प्रतीक्ष्यताम्** ।  
+**न** त्व् अस्य सिद्धौ **यास्यामि**  
+सर्ग-व्यापारम् आत्मना ॥ 2.54 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1301,8 +1355,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इतः स दैत्यः प्राप्तश्रीर्नेत एवार्हति क्षयम् ।  
-विषवृक्षोऽपि संवर्ध्य स्वयं छेत्तुमसाम्प्रतम् ॥ 2.55 ॥  
+इतः स दैत्यः प्राप्तश्रीर्  
+**नेत एवार्हति क्षयम्** ।  
+विष-वृक्षोऽपि संवर्ध्य  
+स्वयं छेत्तुम् असाम्प्रतम् ॥ 2.55 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1323,14 +1379,16 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-वृतं तेनेदमेव प्राङ् मया चास्मैप्रतिश्रुतम् ।  
-वरेणशमितं लोकानलं दग्धुहि तत्तपः ॥ 2.56 ॥  
+**वृतं** तेनेदम् एव प्राङ्  
+मया चास्मै **प्रतिश्रुतम्** ।  
+**वरेण शमितं** लोकान्  
+अलं दग्धुं हि **तत्-तपः** ॥ 2.56 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-वृतं तेनेदमेव प्राङ् मया चास्मैप्रतिश्रुतम् ।  
-वरेणशमितं लोकानलं दग्धुहि तत्तपः ॥ 2.56 ॥  
+वृतं तेनेदमेव प्राङ्मया चास्मै प्रतिश्रुतम् ।  
+वरेण शमितं लोकानलं दग्धुं हि तत्तपः ॥ २।५६॥
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1345,8 +1403,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-संयुगे सांयुगीनं तमुद्यतं प्रसहेत कः ।  
-अंशादृते निषिक्तस्य नीललोहितरेतसः ॥ 2.57 ॥  
+संयुगे सांयुगीनं तम्  
+उद्यतं **प्रसहेत** कः ।  
+अंशाद् ऋते निषिक्तस्य  
+नील-लोहित-रेतसः ॥ 2.57 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1363,18 +1423,20 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 संयुग इति ॥ संयुगे युद्ध उद्यन्तं व्याप्रियमाणम् । संयुगै साधुंसांयुगीनम् । 'प्रतिजनादिभ्यः खञ्' इति खञ्प्रत्ययः । तं तारकं निषिक्तस्य क्वचित्क्षेत्रे क्षरितस्य । 'नीलः कण्ठे लोहितश्च केशेष्विति नीललोहित इति पुराणम् ।' इति स्वामी । तस्य नोलोहितस्य धूर्जटेरेतसः शुक्रस्यांशादृर्तेऽशं विनान्यः कः प्रसहेताभिभवेत् । प्रसहनमभिभवः' इति वृत्तिकारः ॥ 2.57 ॥
+
+कथमसावीदृक्शक्तिरित्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कथमसावीदृक्शक्तिरित्याह-  
-स हि देवः परं ज्योतिस्तमःपारे व्यवस्थितम् ।  
-परिच्छिन्नप्रभावर्द्धिर्न मया न च विष्णुना ॥ 2.58 ॥  
+**स** हि **देवः** परं **ज्योतिस्**  
+तमःपारे **व्यवस्थितम्** ।  
++++(मानेन)+++ परिच्छिन्न-प्रभाव-र्द्धिर्  
+न मया न च विष्णुना ॥ 2.58 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-कथमसावीदृक्शक्तिरित्याह-  
 स हि देवः परं ज्योतिस्तमःपारे व्यवस्थितम् ।  
 परिच्छिन्नप्रभावर्द्धिर्न मया न च विष्णुना ॥ 2.58 ॥  
 </details>
@@ -1386,44 +1448,48 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-स इति ॥ स देवो नीललोहितस्तमसः पारे परतो व्यवस्थितं तमोगुणातीतं परं ज्योतिः परमात्मा हि । अतएव मया परिच्छिन्नप्रभावर्द्धिरवगाढमहिमातिशयो नभवति तथा विष्णुना च न । अतस्तस्यासाध्यं नास्तीत्यर्थः ॥ 2.58 ॥
+स इति ॥ स देवो नीललोहितस्तमसः पारे परतो व्यवस्थितं तमोगुणातीतं परं ज्योतिः परमात्मा हि । अतएव मया **परिच्छिन्नप्रभावर्द्धिर्** अवगाढमहिमातिशयो न भवति तथा विष्णुना च न । अतस्तस्यासाध्यं नास्तीत्यर्थः ॥ 2.58 ॥
+
+संप्रति तदंशोत्पत्तावुपायं दर्शयति-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-संप्रति तदंशोत्पत्तावुपायं दर्शयति-  
-उमारुपेण ते यूयं संयमस्तिमितं मनः ।  
-शंभोर्यतध्वमाक्रष्टुमयस्कान्तेन लोहवत् ॥ 2.59 ॥  
+उमारूपेण ते यूयं  
+संयम-स्तिमितं मनः ।  
+शंभोर् **यतध्वम् आक्रष्टुम्**  
+अयस्-कान्तेन लोहवत् ॥ 2.59 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-संप्रति तदंशोत्पत्तावुपायं दर्शयति-  
-उमारुपेण ते यूयं संयमस्तिमितं मनः ।  
+उमारूपेण ते यूयं संयमस्तिमितं मनः ।  
 शंभोर्यतध्वमाक्रष्टुमयस्कान्तेन लोहवत् ॥ 2.59 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-ते यूयं संयमस्तिमित शम्भोः मनः उमारुपेण अथस्कान्तेन लोहवत् आक्रष्टुं यतध्वम् ।  
+ते यूयं संयमस्तिमित शम्भोः मनः उमारूपेण अथस्कान्तेन लोहवत् आक्रष्टुं यतध्वम् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-उमेति ॥ ते कार्यार्थिनो यूयं संयमस्तिमितं समाधिनिश्चलं शंभोर्मन उमारुपेणोमासौन्दर्येण 'रूपं स्वभावे सौन्दर्ये नाणके पशुशब्दयोः । ग्रन्थावृत्तौ नाटकादावाकारश्लोकयोरपि ॥' इति विश्वः । अयस्कान्तेन मणिविशेषेण । 'कस्कादिषु च' इति सकारः । लोहवदयोधातमिव। 'तेन तुल्यं क्रिया चेद्वतिः' इति वतिप्रत्ययो मृग्यः आक्रष्टुमाहर्तु यतध्वमुद्युक्ता भवत ॥ 2.59 ॥
+उमेति ॥ ते कार्यार्थिनो यूयं संयमस्तिमितं समाधिनिश्चलं शंभोर्मन उमारूपेणोमासौन्दर्येण 'रूपं स्वभावे सौन्दर्ये नाणके पशुशब्दयोः । ग्रन्थावृत्तौ नाटकादावाकारश्लोकयोरपि ॥' इति विश्वः । अयस्कान्तेन मणिविशेषेण । 'कस्कादिषु च' इति सकारः । लोहवदयोधातमिव। 'तेन तुल्यं क्रिया चेद्वतिः' इति वतिप्रत्ययो मृग्यः आक्रष्टुमाहर्तु यतध्वमुद्युक्ता भवत ॥ 2.59 ॥
+
+न च गत्यन्तरमस्तीत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-न च गत्यन्तरमस्तीत्याह-  
-उभे एव क्षमे वोढुमुभयोर्बोजमाहितम् ।  
-सा वा शंभोस्तदीया वा मूर्तिर्जलमयी मम ॥ 2.60 ॥  
+उभे एव **क्षमे वोढुम्**  
+उभयोर् +++(आवयोर्)+++ बीजम् आहितम् ।  
+सा वा शंभोस्, तदीया वा  
+मूर्तिर् जलमयी मम ॥ 2.60 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-न च गत्यन्तरमस्तीत्याह-  
-उभे एव क्षमे वोढुमुभयोर्बोजमाहितम् ।  
+उभे एव क्षमे वोढुमुभयोर्बीजमाहितम् ।  
 सा वा शंभोस्तदीया वा मूर्तिर्जलमयी मम ॥ 2.60 ॥  
 </details>
 
@@ -1434,19 +1500,21 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-उमे इति ॥ उभयोः शंभोर्मम चाहितं निषिक्तं बीजं तेजो वोढुं सोढुं सा वोमा शंभोरष्टमूर्तेस्तस्येयं तदीया जलमयी मूर्तिर्वा मम । न तृतीयेत्यर्थः । वा शब्दो द्वन्द्वार्थे न त्वन्यार्थे । एतदेवोदाहृत्येत्थमेव व्याख्यातं गणव्याख्याने । अत्र दीपकालङ्कारः । प्राकरणिकयोरुमामहेश्वरयोरप्राकरणिकयोर्ब्रह्मजलमूर्त्योश्चौपम्यस्य गम्यत्वात् । यथाह भोजराजः- 'प्रस्तुतानामप्रस्तुतानां चौपम्यस्य गम्यत्वे दीपकम्' इति । न चेयं तुल्योगिता तस्याः केवलप्रस्तुतविषत्वेन केवलाप्रस्तुतविषयत्वेन चोत्थानादिति ॥ 2.60 ॥
+उमे इति ॥ **उभयोः** शंभोर् मम चाहितं निषिक्तं बीजं तेजो वोढुं सोढुं सा वोमा शंभोरष्टमूर्तेस्तस्येयं तदीया जलमयी मूर्तिर्वा मम । न तृतीयेत्यर्थः । वा शब्दो द्वन्द्वार्थे न त्वन्यार्थे । एतदेवोदाहृत्येत्थमेव व्याख्यातं गणव्याख्याने । अत्र दीपकालङ्कारः । प्राकरणिकयोर् उमामहेश्वरयोर् अप्राकरणिकयोर् ब्रह्मजलमूर्त्योश्चौपम्यस्य गम्यत्वात् । यथाह भोजराजः- 'प्रस्तुतानामप्रस्तुतानां चौपम्यस्य गम्यत्वे दीपकम्' इति । न चेयं तुल्योगिता तस्याः केवलप्रस्तुतविषत्वेन केवलाप्रस्तुतविषयत्वेन चोत्थानादिति ॥ 2.60 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्यात्मा शितिकण्ठस्य सैनापत्यमुपेत्य वः ।  
-मोक्ष्यते सुरवन्दीनां वेणीवीर्यर्वाभूतिभिः ॥ 2.61 ॥  
+तस्यात्मा शितिकण्ठस्य  
+सैनापत्यम् **उपेत्य** वः ।  
+**मोक्ष्यते** सुरवन्दीनां  
+वेणीर् वीर्य-विभूतिभिः ॥ 2.61 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तस्यात्मा शितिकण्ठस्य सैनापत्यमुपेत्य वः ।  
-मोक्ष्यते सुरवन्दीनां वेणीवीर्यर्वाभूतिभिः ॥ 2.61 ॥  
+मोक्ष्यते सुरवन्दीनां वेणीर्वीर्यविभूतिभिः ॥ 2.61 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1456,7 +1524,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-तस्येति ॥ तस्य शितिकण्ठस्याष्टमूर्तेरात्मा पुत्रः इत्यर्थः । 'आत्मा वै पुत्रनामासि' इति श्रुतेः । वो युष्माकं सेनापतेर्भावः सैनापत्यम् 'पत्यन्तपुरोहितादिभ्यो यक्' इति यक्प्रत्ययः । उपेत्य प्राप्य वीर्यविभूतिभिः शौर्यसंपत्तिभिः सुरवन्दीनां वेणीर्मोक्ष्यते विस्त्रंसयिष्यति । तारकासुरं हनिष्यतीति भावः ॥ 2.61 ॥
+तस्येति ॥ तस्य शितिकण्ठस्याष्टमूर्तेरात्मा पुत्रः इत्यर्थः । 'आत्मा वै पुत्रनामासि' इति श्रुतेः । वो युष्माकं सेनापतेर्भावः सैनापत्यम् 'पत्यन्तपुरोहितादिभ्यो यक्' इति यक्प्रत्ययः । उपेत्य प्राप्य **वीर्यविभूतिभिः** शौर्यसंपत्तिभिः सुरवन्दीनां **वेणीर् मोक्ष्यते** विस्रंसयिष्यति । तारकासुरं हनिष्यतीति भावः ॥ 2.61 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1467,8 +1535,10 @@ title = "०२"
 
 <details><summary>मूलम्</summary>
 
-इति व्याहृत्य विबुधान्विश्वयोनिस्तिरोदधे ।  
-मनस्याहितकर्तव्यास्तेऽपि देवा दिवं ययुः ॥ 2.62 ॥  
+इति **व्याहृत्य** विबुधान्  
+विश्वयोनिस् **तिरोदधे** ।  
+मनस्य् आहित-कर्तव्यास्  
+तेऽपि देवा **दिवं ययुः** ॥ 2.62 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -1481,15 +1551,18 @@ title = "०२"
 इतीति ॥ विश्वस्य योनिः कारणम् । 'योनिः स्त्रीणां भगस्थाने कारणं तान्त्रिके पणे' इति वैजयन्ती । बिबुधान्सुरानिति व्याहृत्याभिधाय तिरोदधोऽन्तर्हितवान् । ते देवा अपि मनस्याहितं कर्तव्यं यैस्ते तथोक्ताः सन्ता दिवं स्वर्ग ययुः प्रापुः ॥ 2.62 ॥
 </details>
 
+## कन्दर्प-नियोगः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तत्र निश्चित्य कंदपंमगमत्पाकशासनः ।  
-मनसा कार्यसंसिद्धौ त्वराद्विगुणरंहसा ॥ 2.63 ॥  
+तत्र **निश्चित्य** कन्दर्पम्  
+**अगमत्** पाकशासनः ।  
+**मनसा** कार्य-संसिद्धौ  
+त्वरा-द्वि-गुण-रंहसा ॥ 2.63 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तत्र निश्चित्य कंदपंमगमत्पाकशासनः ।  
+तत्र निश्चित्य कन्दर्पमगमत्पाकशासनः ।  
 मनसा कार्यसंसिद्धौ त्वराद्विगुणरंहसा ॥ 2.63 ॥  
 </details>
 
@@ -1505,10 +1578,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथ स ललितयोषिद्‌भ्रूलताचारुश्रृङ्गं  
-रतिवलयपदाङ्के चापमासज्य कण्ठे ।  
-सहचरमधुहस्तन्यस्तचूताङ्कुरास्त्रः  
-शतमखमुपतस्थे प्राञ्जलिः पुष्पधन्वा ॥ 2.64 ॥  
+अथ स ललित-योषिद्--‌भ्रू-लता-चारु-श्रृङ्गं  
+रति-वलय+++(=कङ्कण)+++-पदाङ्के **चापम् आसज्य** कण्ठे ।  
+सहचर-मधु-हस्त-न्यस्त-चूताङ्कुरास्त्रः  
+शत-मखम् **उपतस्थे** प्राञ्जलिः पुष्पधन्वा ॥ 2.64 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -1526,7 +1599,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-अथेति । अथ स्मरणानन्तरम् । स स्मृत इत्यर्थः । पुष्पं धनुर्यस्य स पुष्पधन्वा कामः । 'वा संज्ञायाम्' इत्यनङ् । 'ललितं त्रिषु सुन्दरम्' इत्मरः । ललितायाः सुन्दर्या योषितो भ्रुवौ लते इव चारुणी श्रृङ्गे कोटो यस्य तत्ततोक्त चापम् । रतिः स्मरप्रिया । रतिः स्मरप्रिया' इत्यमरः । तस्या वलयपदानि कङ्कणस्थानान्यङ्कश्चिह्नं यस्य स तथोक्ते कण्ठ आसज्य लगयित्वा । चापकण्ठविशेषणाभ्यां श्रृङ्गारैकनिधेस्त्रिभुवनैकवीरस्य श्रृङ्गारवीरोपकरणेषु तुल्यरसत्वं व्यज्यते । सहचरस्य सख्युर्मधोर्वसन्तस्य हस्ते न्यस्तं चूताङ्कुरमेवास्त्रं यस्य स तथोक्तः प्राञ्जलिः सन् । शतमखमिन्द्रमुपतस्थे सङ्गतवान् । सङ्गतिकरणार्यादात्मनेपदम् । अत्र स्वभावोक्तिः 'ननमयययुतेयं मालिनी भोगिलाकैः' इति लक्षणात् ॥ 2.64 ॥
+अथेति । अथ स्मरणानन्तरम् । स स्मृत इत्यर्थः । पुष्पं धनुर्यस्य स पुष्पधन्वा कामः । 'वा संज्ञायाम्' इत्यनङ् । 'ललितं त्रिषु सुन्दरम्' इत्मरः । ललितायाः सुन्दर्या योषितो भ्रुवौ लते इव चारुणी श्रृङ्गे कोटो यस्य तत्ततोक्त चापम् । रतिः स्मरप्रिया । रतिः स्मरप्रिया' इत्यमरः । तस्या **वलय-पदानि** कङ्कणस्थानान्यङ्कश्चिह्नं यस्य स तथोक्ते कण्ठ आसज्य लगयित्वा । चापकण्ठविशेषणाभ्यां श्रृङ्गारैकनिधेस्त्रिभुवनैकवीरस्य श्रृङ्गारवीरोपकरणेषु तुल्यरसत्वं व्यज्यते । सहचरस्य सख्युर्मधोर्वसन्तस्य हस्ते न्यस्तं चूताङ्कुरमेवास्त्रं यस्य स तथोक्तः प्राञ्जलिः सन् । शतमखमिन्द्रमुपतस्थे सङ्गतवान् । सङ्गतिकरणार्यादात्मनेपदम् । अत्र स्वभावोक्तिः 'ननमयययुतेयं मालिनी भोगिलाकैः' इति लक्षणात् ॥ 2.64 ॥
 </details>
 
 इति श्रीमन्महामहोपाध्यायकोलाचलमाल्लिनाथसूरिविरचितया  
