--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -254,7 +254,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-अथेति ॥ अथ स्मरवाक्यश्रवणानन्तरमाखण्डलः सहस्त्राक्षऊरुदेशात्पादमाक्रमणेन संभावेतं पादपीठं यस्मिंस्तद्यथा तथावतार्थं संकल्पितार्थे हरचिताकर्षणरुपे विषये विवृतात्मशक्तिम् । 'कुर्यां हरस्यापि-' (3/10) इत्यादिना प्रकटीकृतस्वसामर्थ्य कामं स्मरमिदं वक्ष्यमाणां बभाषे ॥ 3.11 ॥
+अथेति ॥ अथ स्मरवाक्यश्रवणानन्तरमाखण्डलः सहस्त्राक्षऊरुदेशात्पादमाक्रमणेन संभावेतं पादपीठं यस्मिंस्तद्यथा तथावतार्थं संकल्पितार्थे हरचिताकर्षणरूपे विषये विवृतात्मशक्तिम् । 'कुर्यां हरस्यापि-' (3/10) इत्यादिना प्रकटीकृतस्वसामर्थ्य कामं स्मरमिदं वक्ष्यमाणां बभाषे ॥ 3.11 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -324,7 +324,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-आशंसतेति ॥ वृषाङ्केहरे बाणगतिं बाणाप्रसरमाशंसता कथयता । 'कुर्यां हरस्यापि पिनाकपाणेः' (3/10) इत्यादिनेति शेषः । त्वया नोऽस्माकं कार्यं प्रतिपन्नकल्पमङ्गीकृतप्रायम् । 'ईषदसमात्पौ-' इत्यादिना कल्पप्रत्ययः । कथमेतदित्याह- इदानीमुच्चैरुन्नता द्विषो येषां तेषामुच्चैद्विषां यज्ञांशभुजां देवानाम् । एतेन द्विषल्लत्पयज्ञभागत्वं सूच्यते । ईप्सितमाप्तुमिष्टमेतदेव हरे बाणप्रयोगरुपमेव निबोध । हरायत्तं बुद्ध्यस्वेत्यर्थः । 'बुध बोधने' इति धातोर्लोट् । अत्र 'आशंसता प्रार्थयमानेन' इति नाथव्याख्यानमनाथव्याख्यानम् । आङ्पूर्वयोः शास्तिशंसत्योरिच्छार्थत्वे आत्मनेपदनियमात् । याच्‌ञार्थत्वस्याप्रामाणिकत्वात् । 'कुर्यां हरस्यापि-' (3/10) इत्यत्रानयोरभावादयोगच्चेति ॥ 3.14 ॥
+आशंसतेति ॥ वृषाङ्केहरे बाणगतिं बाणाप्रसरमाशंसता कथयता । 'कुर्यां हरस्यापि पिनाकपाणेः' (3/10) इत्यादिनेति शेषः । त्वया नोऽस्माकं कार्यं प्रतिपन्नकल्पमङ्गीकृतप्रायम् । 'ईषदसमात्पौ-' इत्यादिना कल्पप्रत्ययः । कथमेतदित्याह- इदानीमुच्चैरुन्नता द्विषो येषां तेषामुच्चैद्विषां यज्ञांशभुजां देवानाम् । एतेन द्विषल्लत्पयज्ञभागत्वं सूच्यते । ईप्सितमाप्तुमिष्टमेतदेव हरे बाणप्रयोगरूपमेव निबोध । हरायत्तं बुद्ध्यस्वेत्यर्थः । 'बुध बोधने' इति धातोर्लोट् । अत्र 'आशंसता प्रार्थयमानेन' इति नाथव्याख्यानमनाथव्याख्यानम् । आङ्पूर्वयोः शास्तिशंसत्योरिच्छार्थत्वे आत्मनेपदनियमात् । याच्‌ञार्थत्वस्याप्रामाणिकत्वात् । 'कुर्यां हरस्यापि-' (3/10) इत्यत्रानयोरभावादयोगच्चेति ॥ 3.14 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
