--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/04.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/04.md
@@ -116,7 +116,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-उपेति । तव यत्करणं गात्रम् । 'करणं साधकतमं क्षेत्रगात्रेन्द्रियेष्वपि' इत्यमरः । कान्तिमत्तया सौन्दर्येण हेतुना विलसनशीलानाम् । 'वौ कषलसे-' त्यादिना घिनुण्प्रत्ययः । उपमीयते येन तदुपमानमभूत् । तत्करणमिदमीदृशीं दशामवस्थां गतम् । भस्मीभूतमित्यर्थः । तथापि न विदीर्ये न विदीर्णा भवामि । कर्तरि लट् । तथाहि । स्त्रियः कठिनाः खलु । कठिनत्वादविदीर्यमाणत्वमित्यर्थः । कारणात्कार्यसमर्थनरुपोऽर्थान्तरन्यासः । 'धीरसंचारिणी दृष्टिर्गतिर्गोवृषभाञ्चिता । स्मितपूर्वं तथालापो विलास इति कीर्तितः ॥' इति ॥ 4.5 ॥
+उपेति । तव यत्करणं गात्रम् । 'करणं साधकतमं क्षेत्रगात्रेन्द्रियेष्वपि' इत्यमरः । कान्तिमत्तया सौन्दर्येण हेतुना विलसनशीलानाम् । 'वौ कषलसे-' त्यादिना घिनुण्प्रत्ययः । उपमीयते येन तदुपमानमभूत् । तत्करणमिदमीदृशीं दशामवस्थां गतम् । भस्मीभूतमित्यर्थः । तथापि न विदीर्ये न विदीर्णा भवामि । कर्तरि लट् । तथाहि । स्त्रियः कठिनाः खलु । कठिनत्वादविदीर्यमाणत्वमित्यर्थः । कारणात्कार्यसमर्थनरूपोऽर्थान्तरन्यासः । 'धीरसंचारिणी दृष्टिर्गतिर्गोवृषभाञ्चिता । स्मितपूर्वं तथालापो विलास इति कीर्तितः ॥' इति ॥ 4.5 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -160,7 +160,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-कृतेति । हे प्रिय, त्वं मे मम विप्रियमप्रियं कृतवान्नासि । मया च ते तव प्रतिकूलमप्रियं न कृतम् । अकारणं निष्कारणमेव । परस्परापकाररुपकारणाभावेऽपीत्यर्थः । क्रियाविशेषणमेतत् । विलपन्त्यै । त्वद्दर्शनार्थिन्या अपीति भावः । रतये किं कथं दर्शनं न दीयते । क्रियाग्रहणाच्चतुर्थि ॥ 4.7 ॥
+कृतेति । हे प्रिय, त्वं मे मम विप्रियमप्रियं कृतवान्नासि । मया च ते तव प्रतिकूलमप्रियं न कृतम् । अकारणं निष्कारणमेव । परस्परापकाररूपकारणाभावेऽपीत्यर्थः । क्रियाविशेषणमेतत् । विलपन्त्यै । त्वद्दर्शनार्थिन्या अपीति भावः । रतये किं कथं दर्शनं न दीयते । क्रियाग्रहणाच्चतुर्थि ॥ 4.7 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
