--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -70,7 +70,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-स इति । स प्रकृतः । शास्तीति शासनः बहुलग्रहणात्कर्तरि ल्यट्' स्मरस्य शासन ईश्वरस्तथेति प्रतिज्ञाय । तथा करिष्यामीत्युक्त्वेत्यर्थः । उमां कथमपि कृच्छ्रेण विसृज्य । तत्र गाढानुरागत्वादिति भावः । ज्योतिर्मयांस्तेजोरुपान्सप्तर्षिनङ्गिरःप्रभृतीन्सस्मार स्मृतवान् ॥ 6.3 ॥
+स इति । स प्रकृतः । शास्तीति शासनः बहुलग्रहणात्कर्तरि ल्यट्' स्मरस्य शासन ईश्वरस्तथेति प्रतिज्ञाय । तथा करिष्यामीत्युक्त्वेत्यर्थः । उमां कथमपि कृच्छ्रेण विसृज्य । तत्र गाढानुरागत्वादिति भावः । ज्योतिर्मयांस्तेजोरूपान्सप्तर्षिनङ्गिरःप्रभृतीन्सस्मार स्मृतवान् ॥ 6.3 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
