--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
@@ -292,7 +292,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-तामिति । नार्यः प्रसाधिकास्तां तन्वीं पार्वती तत्र वेदिमध्ये प्राङ्नुखीं निवेश्योपवेश्य पुरोनिषण्णा अग्रे स्थिताः । प्रसाध्यतेऽनेनेति प्रसाधनेऽलंकारसाधनवर्गे संनिहितेऽपि भूतार्था सत्यरुपा । स्वाभाविकीति यावत् । या शोभा रामणीयकं तया ह्रियमाणान्याकृष्यमाणानि नेत्राणि यासां तास्तथोक्ताः क्षणं व्यलम्बन्त । स्वभावसुन्दर्याः किमस्याः प्रसाधनेनेति तूष्णीं तस्थुरित्यर्थः ॥ 7.13 ॥
+तामिति । नार्यः प्रसाधिकास्तां तन्वीं पार्वती तत्र वेदिमध्ये प्राङ्नुखीं निवेश्योपवेश्य पुरोनिषण्णा अग्रे स्थिताः । प्रसाध्यतेऽनेनेति प्रसाधनेऽलंकारसाधनवर्गे संनिहितेऽपि भूतार्था सत्यरूपा । स्वाभाविकीति यावत् । या शोभा रामणीयकं तया ह्रियमाणान्याकृष्यमाणानि नेत्राणि यासां तास्तथोक्ताः क्षणं व्यलम्बन्त । स्वभावसुन्दर्याः किमस्याः प्रसाधनेनेति तूष्णीं तस्थुरित्यर्थः ॥ 7.13 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -610,13 +610,13 @@ title = "०७"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इच्छाविभूत्योरनुरुपमद्रिस्तस्याः कृती कृत्यमशेषयित्वा ।  
+इच्छाविभूत्योरनुरूपमद्रिस्तस्याः कृती कृत्यमशेषयित्वा ।  
 सभ्यः सभायां सुहृदास्थितायां तस्थौ वृषाङ्कागमनप्रतीक्षः ॥ 7.29 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-इच्छाविभूत्योरनुरुपमद्रिस्तस्याः कृती कृत्यमशेषयित्वा ।  
+इच्छाविभूत्योरनुरूपमद्रिस्तस्याः कृती कृत्यमशेषयित्वा ।  
 सभ्यः सभायां सुहृदास्थितायां तस्थौ वृषाङ्कागमनप्रतीक्षः ॥ 7.29 ॥  
 </details>
 
@@ -632,13 +632,13 @@ title = "०७"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तावद्भवस्यापि कुबेरशैले तत्पूर्वपाणिग्रहणानुरुपम् ।  
+तावद्भवस्यापि कुबेरशैले तत्पूर्वपाणिग्रहणानुरूपम् ।  
 प्रसाधनं मातृभिरादृताभिर्न्यस्तं पुरस्तात्पुर शासनस्य ॥ 7.30 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तावद्भवस्यापि कुबेरशैले तत्पूर्वपाणिग्रहणानुरुपम् ।  
+तावद्भवस्यापि कुबेरशैले तत्पूर्वपाणिग्रहणानुरूपम् ।  
 प्रसाधनं मातृभिरादृताभिर्न्यस्तं पुरस्तात्पुर शासनस्य ॥ 7.30 ॥  
 </details>
 
@@ -671,7 +671,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-तदिति । ईश्वरेण शिवेन सा णङ्गलमण्डनश्रीः शुभप्रसाधनसंपत्तद्गौरवात्तासु मातृष्वादरात्केवलं पस्पृशे स्पृष्टैव, न तु दध्रे इत्यवधारणार्थः केवलशब्दः । 'केवलं चावधारणे' इति शाश्वतः । किंतु तस्य विर्भोर्देवस्य स एव वेषः स्वाभाविको भस्मकपालादिवेष एव परिणेतुर्लोकरुद्वोदुरिष्टमपेक्षितं भावान्तरं रुपान्तरं प्रपेदे । अङ्गरागादिरुपतां प्रापेत्यर्थः ॥ 7.31 ॥
+तदिति । ईश्वरेण शिवेन सा णङ्गलमण्डनश्रीः शुभप्रसाधनसंपत्तद्गौरवात्तासु मातृष्वादरात्केवलं पस्पृशे स्पृष्टैव, न तु दध्रे इत्यवधारणार्थः केवलशब्दः । 'केवलं चावधारणे' इति शाश्वतः । किंतु तस्य विर्भोर्देवस्य स एव वेषः स्वाभाविको भस्मकपालादिवेष एव परिणेतुर्लोकरुद्वोदुरिष्टमपेक्षितं भावान्तरं रूपान्तरं प्रपेदे । अङ्गरागादिरुपतां प्रापेत्यर्थः ॥ 7.31 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1334,7 +1334,7 @@ title = "०७"
 
 <details><summary>अन्वयः</summary>
 
-सत्वरम् उत्थितायाः कस्याश्चित् अर्धाचिता रशना दुर्निमिते पदे पदे गलन्ती सती तदानीम् अङ्गुष्ठमूलाऽप्रितसूत्रशेषा आसीत् ।  
+सत्वरम् उत्थितायाः कस्याश्चित् अर्धाचिता रशना दुर्निमिते पदे पदे गलन्ती सती तदानीम् अङ्गुष्ठमूलाऽर्पितसूत्रशेषा आसीत् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
