--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
@@ -128,13 +128,13 @@ title = "०८"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 एवमालि निगृहीतसाध्वसं शंकरो रहसि सेव्यतामिति ।  
-सा सखीभिरुपदिष्टमाकुला नास्मरत्प्रमुखवर्तिनी प्रिये ॥ 8.5 ॥  
+सा सखीभिरूपदिष्टमाकुला नास्मरत्प्रमुखवर्तिनी प्रिये ॥ 8.5 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 एवमालि निगृहीतसाध्वसं शंकरो रहसि सेव्यतामिति ।  
-सा सखीभिरुपदिष्टमाकुला नास्मरत्प्रमुखवर्तिनी प्रिये ॥ 8.5 ॥  
+सा सखीभिरूपदिष्टमाकुला नास्मरत्प्रमुखवर्तिनी प्रिये ॥ 8.5 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -144,7 +144,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-एवमिति । हे आलि सखि पार्वति ! रहसि शंकर एवम् । स्वोपदिष्टप्रकारेणेत्यर्थः । निगृहीतसाध्वसं निरस्तभयं यथा तथा सेव्यतामिति । सखीभिरुपदिष्टमुक्तं वचनं सा पार्वती प्रिये शंकरे प्रमुखवर्तिनि सत्याकुला साध्वसविह्वला सती नास्मरत् । न स्मृतवतीत्यर्थः । स हि भयपरिप्लुते चेतसि दृष्टतरोऽप्युपदेशः संसारमाधत्त इति भावः ॥ 8.5 ॥
+एवमिति । हे आलि सखि पार्वति ! रहसि शंकर एवम् । स्वोपदिष्टप्रकारेणेत्यर्थः । निगृहीतसाध्वसं निरस्तभयं यथा तथा सेव्यतामिति । सखीभिरूपदिष्टमुक्तं वचनं सा पार्वती प्रिये शंकरे प्रमुखवर्तिनि सत्याकुला साध्वसविह्वला सती नास्मरत् । न स्मृतवतीत्यर्थः । स हि भयपरिप्लुते चेतसि दृष्टतरोऽप्युपदेशः संसारमाधत्त इति भावः ॥ 8.5 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -168,7 +168,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-अपीति । अथाप्रवृत्तये संलापप्रवर्तनायावस्तुन्यप्रस्तुर्तार्थेंऽपि प्रश्नतत्परम् । यत्किंचित्पृच्छन्तमित्यर्थः । अनङ्गशासनमीश्वरं पार्वती वीक्षितेन । न तु वाचेत्यर्थः । परिगृह्याङ्गीकृत्य मूर्धंकम्पयं शिरःकम्पस्वरुपम् । स्वर्थे मयट् । उत्तरं ददौ । नतु वाङ्मयं साध्वसादिति भावः । विहृतनामा लज्जानुभाव उक्तः । तदुक्तम् रतिरहस्ये-- (ईर्ष्यामानातिलज्जाभ्यां न दत्तं योग्यमुत्तरम् । क्रियया व्यज्यते यत्र विहृतं तदुदीरितम् ।) इति ॥ 8.6 ॥
+अपीति । अथाप्रवृत्तये संलापप्रवर्तनायावस्तुन्यप्रस्तुर्तार्थेंऽपि प्रश्नतत्परम् । यत्किंचित्पृच्छन्तमित्यर्थः । अनङ्गशासनमीश्वरं पार्वती वीक्षितेन । न तु वाचेत्यर्थः । परिगृह्याङ्गीकृत्य मूर्धंकम्पयं शिरःकम्पस्वरूपम् । स्वर्थे मयट् । उत्तरं ददौ । नतु वाङ्मयं साध्वसादिति भावः । विहृतनामा लज्जानुभाव उक्तः । तदुक्तम् रतिरहस्ये-- (ईर्ष्यामानातिलज्जाभ्यां न दत्तं योग्यमुत्तरम् । क्रियया व्यज्यते यत्र विहृतं तदुदीरितम् ।) इति ॥ 8.6 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -312,7 +312,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-नीलकण्ठेति । नीलकण्ठेन परिभुक्तं यौवनं यस्याः सा तथोक्ताम् । प्रियेण भुक्तयौवनामित्यर्थः । तां पार्वतीं विलोक्य जननी मेना समाश्वसत् । संतुतोषेत्यर्थः । श्वसिधातोर्लङ् । 'अङ्गार्ग्यगालवयोः' इति विकल्पादडागमः । तथाहि । वधूजनो भर्तृवल्लभतया पतिवात्सल्येन मातुर्मानसीं मनोभवां शुचं शोकमस्यति निरम्यति हि । 'विपर्ययाद्विपर्ययश्च' इत्यर्थादवसेयं सामान्यैकविशेषणसमर्थंनरुपोऽर्थान्तरन्यासः ॥ 8.12 ॥
+नीलकण्ठेति । नीलकण्ठेन परिभुक्तं यौवनं यस्याः सा तथोक्ताम् । प्रियेण भुक्तयौवनामित्यर्थः । तां पार्वतीं विलोक्य जननी मेना समाश्वसत् । संतुतोषेत्यर्थः । श्वसिधातोर्लङ् । 'अङ्गार्ग्यगालवयोः' इति विकल्पादडागमः । तथाहि । वधूजनो भर्तृवल्लभतया पतिवात्सल्येन मातुर्मानसीं मनोभवां शुचं शोकमस्यति निरम्यति हि । 'विपर्ययाद्विपर्ययश्च' इत्यर्थादवसेयं सामान्यैकविशेषणसमर्थंनरूपोऽर्थान्तरन्यासः ॥ 8.12 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
