--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
@@ -98,7 +98,7 @@ title = "०९"
 
 <details><summary>सीतारामः</summary>
 
-रतीति । रत्या स्वपत्न्या द्वितीयेन । रतिसहायेनेत्यर्थः । मनोभवैन कर्त्रा । प्रविगाह्यमानादवलोड्यमानात्सुधाया ह्रदान्नवमुत्थमुत्पन्नं फेनस्य चयमिव स्थितं तं कपोतं वीक्ष्येन्दुमौलिः शिवः क्षणमभ्यनन्ददस्तौषीत् । कपोतरुपे वस्तुनि धवलिमरुपधर्मेण गम्यमानेन फेनचयरुपवस्तूत्प्रेक्षालंकारः ॥ 9.4 ॥
+रतीति । रत्या स्वपत्न्या द्वितीयेन । रतिसहायेनेत्यर्थः । मनोभवैन कर्त्रा । प्रविगाह्यमानादवलोड्यमानात्सुधाया ह्रदान्नवमुत्थमुत्पन्नं फेनस्य चयमिव स्थितं तं कपोतं वीक्ष्येन्दुमौलिः शिवः क्षणमभ्यनन्ददस्तौषीत् । कपोतरूपे वस्तुनि धवलिमरूपधर्मेण गम्यमानेन फेनचयरूपवस्तूत्प्रेक्षालंकारः ॥ 9.4 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
