--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/11.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/11.md
@@ -76,7 +76,7 @@ title = "११"
 
 <details><summary>सीतारामः</summary>
 
-संक्रन्दन इति । अथानन्तरं संक्रन्दन इन्द्रः । 'संक्रन्दनो दुश्च्यवनः' इत्यमरः । मातलिना सारथिना दत्त आश्रयीकरणार्थमग्रेकृतो हस्तो यस्मै सः । अवलम्बितमातलिहस्तः सन्नित्यर्थः । मेघस्वरुपधारिणे मेघरुपादित्यर्थः । स्यन्दनतो रथात् । पञ्चम्यास्तसिल् । अवतीर्योत्तीर्य शुचौ ग्रीष्मे पिपासया तृष्णया तृषेति यावत् । आकुलित आतुरः पुरुषोऽम्भो यथा जलमिव पिनाकिनो हरस्यालयं निलयमुच्चचाल । उद्दिश्य चलति स्मेत्यर्थः । 'निकाय्यनिलयालयाः' । इत्यमरः । पिपासेति 'अप्रत्ययात्' इत्यकारप्रत्यये टाप् । अत्रापि पूर्णोपमालङ्कारः । सामान्यधर्मस्त्वाकुलितत्वमित्याकुलितत्वे निमित्तभूतौ पिपासोपप्लवौ । अनयोर्बिम्बप्रतिबिम्बभावेन सादृस्यम् ॥ 12.3 ॥
+संक्रन्दन इति । अथानन्तरं संक्रन्दन इन्द्रः । 'संक्रन्दनो दुश्च्यवनः' इत्यमरः । मातलिना सारथिना दत्त आश्रयीकरणार्थमग्रेकृतो हस्तो यस्मै सः । अवलम्बितमातलिहस्तः सन्नित्यर्थः । मेघस्वरूपधारिणे मेघरूपादित्यर्थः । स्यन्दनतो रथात् । पञ्चम्यास्तसिल् । अवतीर्योत्तीर्य शुचौ ग्रीष्मे पिपासया तृष्णया तृषेति यावत् । आकुलित आतुरः पुरुषोऽम्भो यथा जलमिव पिनाकिनो हरस्यालयं निलयमुच्चचाल । उद्दिश्य चलति स्मेत्यर्थः । 'निकाय्यनिलयालयाः' । इत्यमरः । पिपासेति 'अप्रत्ययात्' इत्यकारप्रत्यये टाप् । अत्रापि पूर्णोपमालङ्कारः । सामान्यधर्मस्त्वाकुलितत्वमित्याकुलितत्वे निमित्तभूतौ पिपासोपप्लवौ । अनयोर्बिम्बप्रतिबिम्बभावेन सादृस्यम् ॥ 12.3 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -175,18 +175,18 @@ title = "११"
 भ्रूसंज्ञयेति । अनेन जगतामीश्वरेण महेश्वरेण भ्रूसंज्ञया । भ्रूकुटीचमत्कृतिसंकेतेनेत्यर्थः । कृताभ्यनुज्ञः सुरेन्द्रागमनार्थं कृतानुशासनः स नन्दी गणः पुरोगोऽग्रगामी सन् । तं सुरेश्वरमिन्द्रं सच्छोभनमस्य महेश्वरस्य सदनं गृहं सुरैः समं प्रवेशयामास । प्रवेशितवानित्यर्थः ॥ 12.7 ॥
 </details>
 
-स चण्डिभृङ्गिप्रमुखैर्गरिष्ठैर्गणैरनेकैर्विविधस्वरुपैः ।  
+स चण्डिभृङ्गिप्रमुखैर्गरिष्ठैर्गणैरनेकैर्विविधस्वरूपैः ।  
 (3)अधिष्ठितं संसदि (4)रत्नमय्यां सहस्त्रनेत्रः(5) शिवमालुलोके ॥ 12.8 ॥  
 (3.अधिष्ठितायां यदि.4.रत्नवत्याम्.5.सहस्त्रलोकः.)  
 
 <details><summary>अन्वयः</summary>
 
-स सहस्त्रनेत्रो गरिष्ठैः अनेकैः विविधस्वरुपैः चण्‍डिभृङ्गिप्रमुखैः गणैः रत्नमय्यां संसदि अधिष्ठितं शिवम् आलुलोके ।  
+स सहस्त्रनेत्रो गरिष्ठैः अनेकैः विविधस्वरूपैः चण्‍डिभृङ्गिप्रमुखैः गणैः रत्नमय्यां संसदि अधिष्ठितं शिवम् आलुलोके ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-स इति । स सहस्त्रनेत्र इन्द्रो गरिष्ठैरतिशयेन गुरुभिः । 'प्रियस्थिरे-' त्यादिना गुरुशब्दस्य गरादेशः । अनेकैर्बहुभिर्विविधस्वरुपैर्नानाकृतिभिश्चण्डिभृङ्गिप्रमुखैर्गणैः रत्नमय्यां रत्नप्रचुरायाम् । प्राचुर्ये मयट् । 'टिड्ढे-'ति ङीप् । संसदि सभायामधिष्ठितमुपविष्टं शिवमालुलोके ददर्श । इह 'अधिशीङ्-' इत्याधारस्य कर्मत्वप्रसङ्गो दुर्निवारः । अत एव रत्नमयीं सभां तामिति प्रतिष्ठितमिति वा पठनीयम् । यथास्थितविन्यासे दूषणोद्धारं सुधियो विभावयन्त्विति ॥ 12.8 ॥
+स इति । स सहस्त्रनेत्र इन्द्रो गरिष्ठैरतिशयेन गुरुभिः । 'प्रियस्थिरे-' त्यादिना गुरुशब्दस्य गरादेशः । अनेकैर्बहुभिर्विविधस्वरूपैर्नानाकृतिभिश्चण्डिभृङ्गिप्रमुखैर्गणैः रत्नमय्यां रत्नप्रचुरायाम् । प्राचुर्ये मयट् । 'टिड्ढे-'ति ङीप् । संसदि सभायामधिष्ठितमुपविष्टं शिवमालुलोके ददर्श । इह 'अधिशीङ्-' इत्याधारस्य कर्मत्वप्रसङ्गो दुर्निवारः । अत एव रत्नमयीं सभां तामिति प्रतिष्ठितमिति वा पठनीयम् । यथास्थितविन्यासे दूषणोद्धारं सुधियो विभावयन्त्विति ॥ 12.8 ॥
 </details>
 
 (6)कपर्द(7)मुद्वद्धमहीनमूर्धरत्नांशुभिर्भासुरमुल्लसद्भिः ।  
@@ -273,7 +273,7 @@ title = "११"
 
 <details><summary>सीतारामः</summary>
 
-भालस्थल इति । भालस्थले ललाटदेश एधमानं वर्धमानं यद्धाम तेजस्तेन निमित्तेनाधरीभूते परिभावमुपागते रवीन्दू एव नेत्रै तस्मात् । ताभ्यामधिकतेजस्कमित्यर्थः । यद्वा । एधमानधाम अधरीभूतं चेति पदद्वयम् तत्रैवं व्याख्येम् । एधमानं धाम तेजो यस्य । वर्धिष्णुतेजस्कमित्यर्थः । तथोन्नतानतस्थानभेदेनाधरीभूते भालस्थनेत्रापेक्षया नीचैर्भूते रवीन्दू एव नेत्रे यस्य । तथा युगान्तकाले प्रलयकाल उचितं परिचितं हव्यवाहमग्निरुपम् । प्रलयकालिकानलरुपमित्यर्थः । अत एव मीनध्वजस्य कामस्य प्लोषणं दाहकम् । 'प्लुष दाहे' कृत्यल्युटो बहुलम्' इति कर्तरि ल्युट् । एवंभूतं लोचनमादधानम्बिम्राणमित्यर्थः ॥ 12.12 ॥
+भालस्थल इति । भालस्थले ललाटदेश एधमानं वर्धमानं यद्धाम तेजस्तेन निमित्तेनाधरीभूते परिभावमुपागते रवीन्दू एव नेत्रै तस्मात् । ताभ्यामधिकतेजस्कमित्यर्थः । यद्वा । एधमानधाम अधरीभूतं चेति पदद्वयम् तत्रैवं व्याख्येम् । एधमानं धाम तेजो यस्य । वर्धिष्णुतेजस्कमित्यर्थः । तथोन्नतानतस्थानभेदेनाधरीभूते भालस्थनेत्रापेक्षया नीचैर्भूते रवीन्दू एव नेत्रे यस्य । तथा युगान्तकाले प्रलयकाल उचितं परिचितं हव्यवाहमग्निरूपम् । प्रलयकालिकानलरूपमित्यर्थः । अत एव मीनध्वजस्य कामस्य प्लोषणं दाहकम् । 'प्लुष दाहे' कृत्यल्युटो बहुलम्' इति कर्तरि ल्युट् । एवंभूतं लोचनमादधानम्बिम्राणमित्यर्थः ॥ 12.12 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -297,7 +297,7 @@ title = "११"
 
 <details><summary>सीतारामः</summary>
 
-महेति । पुनः किंभूतम् । महार्हाणि बहूमूल्यानि यानि रत्नानि मणयस्तैरञ्चितयोः खचितयोरत एवं समन्तात्सर्वत उदारमधिकं यथा स्यात्तथा स्फुरत्प्रसरत्प्रभामण्डलं कान्तिवितानं, ययोस्तथाभूतयोः कुण्डलयोः कर्णभूषणयोश्छलेन कैतवेन कर्णयोः श्रवणयोः स्थिताभ्यामुपविष्टाभ्यां शशिभास्कराभ्यां चन्द्रसूर्याभ्यामुपासितं सेवितम् । कुण्डलविषये कैतवात्सूर्याचन्द्रमसोरारोप्यमाणत्वात्ताद्रूप्यरुपकं कैतवापह्नुतिश्चेत्युभयोः संसृष्टिः ॥ 12.13 ॥
+महेति । पुनः किंभूतम् । महार्हाणि बहूमूल्यानि यानि रत्नानि मणयस्तैरञ्चितयोः खचितयोरत एवं समन्तात्सर्वत उदारमधिकं यथा स्यात्तथा स्फुरत्प्रसरत्प्रभामण्डलं कान्तिवितानं, ययोस्तथाभूतयोः कुण्डलयोः कर्णभूषणयोश्छलेन कैतवेन कर्णयोः श्रवणयोः स्थिताभ्यामुपविष्टाभ्यां शशिभास्कराभ्यां चन्द्रसूर्याभ्यामुपासितं सेवितम् । कुण्डलविषये कैतवात्सूर्याचन्द्रमसोरारोप्यमाणत्वात्ताद्रूप्यरूपकं कैतवापह्नुतिश्चेत्युभयोः संसृष्टिः ॥ 12.13 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -543,7 +543,7 @@ title = "११"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दृष्ट्वा सहस्त्रेण दृशां महेशमभूत्कृतार्थोऽति(5)तरां महेन्द्रः ।  
-(6)सर्वाङ्गजातं तदथो (7)विरुपमिव(8) (9)प्रियाकोपकरं विवेद ॥ 12.24 ॥  
+(6)सर्वाङ्गजातं तदथो (7)विरूपमिव(8) (9)प्रियाकोपकरं विवेद ॥ 12.24 ॥  
 {5.खलु तेन शक्रः.6.सर्वाङ्ग जातं विकलम्;सर्वाङ्गजानेतदनम्.7.विपूरम्.8.पुरा.9.प्रियालोकपरम्;प्रियाकोपपरः.}  
 </details>
 
