--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/12.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/12.md
@@ -98,7 +98,7 @@ title = "१२"
 
 <details><summary>सीतारामः</summary>
 
-तमिति । सुते पुत्रे वत्सला कृपावती सा हिमाद्रेः सुता पार्वती तं पुत्रम् । अस्य ल्यबन्तत्रयेण सम्बन्धो विधेयः । अङ्कमुत्सङ्गम् । 'अङ्को रुपकभेदाङ्गचिह्ने रेखाजिभूषणे । रुपकाण्डान्तिकोत्सङ्गस्थानेऽङ्कं पापदुःखयोः' इति मेदिनी । आरोप्य संस्थाप्य । तथा गाढं दृढं यथा तथा । 'प्रगाढः कृच्छ्रदृढयोः' इति मेदिनी । प्रेति त्रित्वसंधातनिवेशनायैव । एवं विना तदलाभात् । आश्लिष्यालिह्ग्य । तथा शिरस्युपाघ्राय च । 'हे वत्स, त्वं शत्रुं तारकं जित्वा वीरं सूते सा वीरसूस्तथोक्तां मां कृतार्थीकुरु' इति जगाद । एवंविधे महति कार्ये भवता प्रतिपादिते सति त्रैलोक्यप्रसृतिशीलेन यशसा धवलीकृतं सत् 'एष यदीयः पुत्रः सा कृतार्थैव' इति वर्णयिष्यतीत्यतो मत्कृतार्थत्वं सिद्धमेवेति भावः ॥ 13.4 ॥
+तमिति । सुते पुत्रे वत्सला कृपावती सा हिमाद्रेः सुता पार्वती तं पुत्रम् । अस्य ल्यबन्तत्रयेण सम्बन्धो विधेयः । अङ्कमुत्सङ्गम् । 'अङ्को रूपकभेदाङ्गचिह्ने रेखाजिभूषणे । रूपकाण्डान्तिकोत्सङ्गस्थानेऽङ्कं पापदुःखयोः' इति मेदिनी । आरोप्य संस्थाप्य । तथा गाढं दृढं यथा तथा । 'प्रगाढः कृच्छ्रदृढयोः' इति मेदिनी । प्रेति त्रित्वसंधातनिवेशनायैव । एवं विना तदलाभात् । आश्लिष्यालिह्ग्य । तथा शिरस्युपाघ्राय च । 'हे वत्स, त्वं शत्रुं तारकं जित्वा वीरं सूते सा वीरसूस्तथोक्तां मां कृतार्थीकुरु' इति जगाद । एवंविधे महति कार्ये भवता प्रतिपादिते सति त्रैलोक्यप्रसृतिशीलेन यशसा धवलीकृतं सत् 'एष यदीयः पुत्रः सा कृतार्थैव' इति वर्णयिष्यतीत्यतो मत्कृतार्थत्वं सिद्धमेवेति भावः ॥ 13.4 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -122,7 +122,7 @@ title = "१२"
 
 <details><summary>सीतारामः</summary>
 
-उद्दामेति । ततोऽनन्तरमुद्दाम उद्भटो यो दैत्येशस्तारकस्तस्य विपत्तिर्मृत्युस्तस्याः हेतुः कारणम् । तत्कर्तेत्यर्थः । तथा समरोत्सवस्य संग्रामरुपस्योत्सवस्य 'मह उद्धव उत्सवः' इत्यमरः । इयं कर्मणि षष्ठी । सम्बन्धमात्रविवक्षितत्वात् इह षष्ठ्यन्तस्य वृत्तिगतेनापि श्रद्धाशब्देन नित्यसम्बन्धवशात्सम्बन्धं कृत्वा कृद्योगलक्षणा षठी समर्थनोया । केचित्तु 'समरोत्सवे सः' इति विषयलक्षणसप्तम्यन्तत्वमङ्गीत्य पठन्ति । तत्रापि समासवृतिगतस्य श्रद्धालुशब्दस्य सम्बन्धो दुर्घट इत्यलम् । श्रद्धालु भक्तिशीलं चेतो यस्य । सङ्ग्रामश्रद्धाधायक इत्यर्थः । एवंभूतः कुमारो भक्त्या भक्तिपूर्वकं गिरिजागिरीशौ पितरावापृच्छ्य । मया गम्यत इत्युक्त्वेत्यर्थः । दिवमभि प्रतस्थे चचाल । 'समवप्रे'- त्यात्मनेपदम् ॥ 13.5 ॥
+उद्दामेति । ततोऽनन्तरमुद्दाम उद्भटो यो दैत्येशस्तारकस्तस्य विपत्तिर्मृत्युस्तस्याः हेतुः कारणम् । तत्कर्तेत्यर्थः । तथा समरोत्सवस्य संग्रामरूपस्योत्सवस्य 'मह उद्धव उत्सवः' इत्यमरः । इयं कर्मणि षष्ठी । सम्बन्धमात्रविवक्षितत्वात् इह षष्ठ्यन्तस्य वृत्तिगतेनापि श्रद्धाशब्देन नित्यसम्बन्धवशात्सम्बन्धं कृत्वा कृद्योगलक्षणा षठी समर्थनोया । केचित्तु 'समरोत्सवे सः' इति विषयलक्षणसप्तम्यन्तत्वमङ्गीत्य पठन्ति । तत्रापि समासवृतिगतस्य श्रद्धालुशब्दस्य सम्बन्धो दुर्घट इत्यलम् । श्रद्धालु भक्तिशीलं चेतो यस्य । सङ्ग्रामश्रद्धाधायक इत्यर्थः । एवंभूतः कुमारो भक्त्या भक्तिपूर्वकं गिरिजागिरीशौ पितरावापृच्छ्य । मया गम्यत इत्युक्त्वेत्यर्थः । दिवमभि प्रतस्थे चचाल । 'समवप्रे'- त्यात्मनेपदम् ॥ 13.5 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -170,7 +170,7 @@ title = "१२"
 
 <details><summary>सीतारामः</summary>
 
-अथेति । अथानन्तरं व्रजद्भिर्गच्छद्भिरत एव स्फुरत्प्रसरत्प्रभायाः कान्त्याः सम्बन्धि भासुरं दीप्यमानं मण्डलं चक्रवालं येषाम् । 'चक्रवालं तु मण्डलम्' इत्यमरः । तैरशेषेः संपूर्वणैस्त्रिदशैर्देवैर्विकीर्ण व्याप्तं नभोऽन्तरिक्षं दिवापि दिनेऽपि । उग्रैर्भासुरैर्नक्षत्रगणैर्विकीर्णमिव । बभासे भासुरत्वरुपसाधारणधर्मण त्रिदशविकिरणविशिष्टे नभसि नक्षत्रविकिरणविशिष्टत्वोत्प्रेक्षणादुत्प्रेक्षालङ्कारः । ननु 'उग्रः शूद्रासुते क्षत्राद्रुदे पुंसि त्रिषूत्कटे' इति कोशोक्त्योत्कटवाचिनोऽप्युग्रशब्दस्य कथं भासुरवाचकतेति चेत्, सत्यम् । अत्रोत्कट्यम् केनचिद्विर्मेण विवक्षितं न तु तेजसैव । कान्त्या तापेन वा सौन्दर्यादिना वोत्कटोऽधिक इत्यर्थप्रमयतात्प्रकृते समाधेयम् ॥ 13.7 ॥
+अथेति । अथानन्तरं व्रजद्भिर्गच्छद्भिरत एव स्फुरत्प्रसरत्प्रभायाः कान्त्याः सम्बन्धि भासुरं दीप्यमानं मण्डलं चक्रवालं येषाम् । 'चक्रवालं तु मण्डलम्' इत्यमरः । तैरशेषेः संपूर्वणैस्त्रिदशैर्देवैर्विकीर्ण व्याप्तं नभोऽन्तरिक्षं दिवापि दिनेऽपि । उग्रैर्भासुरैर्नक्षत्रगणैर्विकीर्णमिव । बभासे भासुरत्वरूपसाधारणधर्मण त्रिदशविकिरणविशिष्टे नभसि नक्षत्रविकिरणविशिष्टत्वोत्प्रेक्षणादुत्प्रेक्षालङ्कारः । ननु 'उग्रः शूद्रासुते क्षत्राद्रुदे पुंसि त्रिषूत्कटे' इति कोशोक्त्योत्कटवाचिनोऽप्युग्रशब्दस्य कथं भासुरवाचकतेति चेत्, सत्यम् । अत्रोत्कट्यम् केनचिद्विर्मेण विवक्षितं न तु तेजसैव । कान्त्या तापेन वा सौन्दर्यादिना वोत्कटोऽधिक इत्यर्थप्रमयतात्प्रकृते समाधेयम् ॥ 13.7 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -436,7 +436,7 @@ continue to august
 
 <details><summary>सीतारामः</summary>
 
-सान्द्रेति । सान्द्रप्रमोदाद्धनानन्दाद्धेतोः पुलकै रोमाञ्चैरुपगूढ आश्लिष्टः । 'पुलकः कृमिभेदेऽश्मभेदे च मणिदोषके । रोमाञ्चै हरिताले गजात्तपिण्डे च गन्धके । इति मेदिनी । तथा सर्वेष्वङ्गेषु संफुल्लानि सहस्त्रनेत्राणि यस्य । यतः । सहस्त्राक्षस्तथाभूतः शक्र इन्द्रस्तस्य कुमारस्योत्तरीयेण संव्यानेन । संव्यानमुत्तरीयं स्यात्' इत्यमरः । तथा निजाम्बरेण निरुञ्छनं परिवर्तनं चारु चकार । भ्रातृभावायान्योन्यवस्त्रग्रहणं चक्रतुरित्यर्थः । तदुक्तं मेदिन्याम्- 'निरुञ्छनं बन्धुतायै वाससः परिवर्तनम्' इति । लोकेऽपि भ्रातृतायै परस्योष्णिग्बन्धनव्यवहारस्तद्वदत्रापीति अनुशासने सामान्यतो वासोग्रहणेन प्रकृत उत्तरीयग्रहणं सङ्गच्छते । लोकव्यवहारस्तु संप्रदायसिद्धः । उष्णिहि विशेषश्रैष्ठ्योपलम्भ एव व्यवहारमूलमिति मन्तव्यम् ॥ 13.18 ॥
+सान्द्रेति । सान्द्रप्रमोदाद्धनानन्दाद्धेतोः पुलकै रोमाञ्चैरूपगूढ आश्लिष्टः । 'पुलकः कृमिभेदेऽश्मभेदे च मणिदोषके । रोमाञ्चै हरिताले गजात्तपिण्डे च गन्धके । इति मेदिनी । तथा सर्वेष्वङ्गेषु संफुल्लानि सहस्त्रनेत्राणि यस्य । यतः । सहस्त्राक्षस्तथाभूतः शक्र इन्द्रस्तस्य कुमारस्योत्तरीयेण संव्यानेन । संव्यानमुत्तरीयं स्यात्' इत्यमरः । तथा निजाम्बरेण निरुञ्छनं परिवर्तनं चारु चकार । भ्रातृभावायान्योन्यवस्त्रग्रहणं चक्रतुरित्यर्थः । तदुक्तं मेदिन्याम्- 'निरुञ्छनं बन्धुतायै वाससः परिवर्तनम्' इति । लोकेऽपि भ्रातृतायै परस्योष्णिग्बन्धनव्यवहारस्तद्वदत्रापीति अनुशासने सामान्यतो वासोग्रहणेन प्रकृत उत्तरीयग्रहणं सङ्गच्छते । लोकव्यवहारस्तु संप्रदायसिद्धः । उष्णिहि विशेषश्रैष्ठ्योपलम्भ एव व्यवहारमूलमिति मन्तव्यम् ॥ 13.18 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
