--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
@@ -438,7 +438,7 @@ title = "१३"
 
 <details><summary>सीतारामः</summary>
 
-क्षुण्णमिति । रथैः स्यन्दनै क्षुण्णमुत्खनितम् । तथा काञ्चनशैलजं सुमेरुपर्वतजनितम् । इदं विशेषणं पीतत्वद्योतनार्थम् । रजो धूलिः । वाजिभिरश्वैः कर्तृभिः खुरैः करणैः । कृत्वाऽऽहतं चूर्णीकृतम् । पिष्टीकृतमिति यावत् । तथा करीन्द्राणां मत्तगजानां कर्णैः श्रवणैः परितः सर्वतः प्रसारितं विस्तृतम् । तथा ध्वजैर्धूतं कम्पितम् । एतेन सघनता द्योतिता । तथा वातैः पवनैर्हतं स्पृष्टम् । एतेन पवनस्योपरि रंहःप्राप्तौ साधकतोक्ता । क्रमाद्यथाक्रमं व्योम कर्म समारुहत् । आकाशमारुढमित्यर्थः । अत्र रुहेर्भौवादिकत्वाल्लङि गुणप्रसङ्गः, लुङि शलन्तत्वात्क्सप्रसङ्गः, णिजन्तत्वे लङि यकारश्रवणप्रसङ्ग इत्यतोऽयं प्रयोगश्चिन्त्य इति बहवः । वयं तु व्योम्न्याकाशे सम्यगारोहतीति समारोहः, इगुपधलक्षणः कः, तत आचारार्थे क्विपि अल्लोपे धातुत्वाल्लङि शपि अल्लोपस्य स्थानिवत्त्वाद् गुणाभावे च रुपसिद्धिरिति समादध्महे ॥ 14.19 ॥
+क्षुण्णमिति । रथैः स्यन्दनै क्षुण्णमुत्खनितम् । तथा काञ्चनशैलजं सुमेरुपर्वतजनितम् । इदं विशेषणं पीतत्वद्योतनार्थम् । रजो धूलिः । वाजिभिरश्वैः कर्तृभिः खुरैः करणैः । कृत्वाऽऽहतं चूर्णीकृतम् । पिष्टीकृतमिति यावत् । तथा करीन्द्राणां मत्तगजानां कर्णैः श्रवणैः परितः सर्वतः प्रसारितं विस्तृतम् । तथा ध्वजैर्धूतं कम्पितम् । एतेन सघनता द्योतिता । तथा वातैः पवनैर्हतं स्पृष्टम् । एतेन पवनस्योपरि रंहःप्राप्तौ साधकतोक्ता । क्रमाद्यथाक्रमं व्योम कर्म समारुहत् । आकाशमारुढमित्यर्थः । अत्र रुहेर्भौवादिकत्वाल्लङि गुणप्रसङ्गः, लुङि शलन्तत्वात्क्सप्रसङ्गः, णिजन्तत्वे लङि यकारश्रवणप्रसङ्ग इत्यतोऽयं प्रयोगश्चिन्त्य इति बहवः । वयं तु व्योम्न्याकाशे सम्यगारोहतीति समारोहः, इगुपधलक्षणः कः, तत आचारार्थे क्विपि अल्लोपे धातुत्वाल्लङि शपि अल्लोपस्य स्थानिवत्त्वाद् गुणाभावे च रूपसिद्धिरिति समादध्महे ॥ 14.19 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
