--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -31,24 +31,24 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इयेष सा कर्तुमबन्ध्यरुपतां समाधिमास्थाय तपोभिरात्मनः ।  
+इयेष सा कर्तुमबन्ध्यरूपतां समाधिमास्थाय तपोभिरात्मनः ।  
 अवाप्यते वा कथमन्यथा द्वयं तथाविधं प्रेम पतिश्च तादृशः ॥ 5.2 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-इयेष सा कर्तुमबन्ध्यरुपतां समाधिमास्थाय तपोभिरात्मनः ।  
+इयेष सा कर्तुमबन्ध्यरूपतां समाधिमास्थाय तपोभिरात्मनः ।  
 अवाप्यते वा कथमन्यथा द्वयं तथाविधं प्रेम पतिश्च तादृशः ॥ 5.2 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-सा समाधिम् आस्थाय तपोभिः आत्मनः अवन्ध्यरुपतां कर्तुम् इयेष; अन्यथा तथाविधं प्रेम वा तादृशः पतिश्च द्वयं कथम् अवाप्यते ।  
+सा समाधिम् आस्थाय तपोभिः आत्मनः अवन्ध्यरूपतां कर्तुम् इयेष; अन्यथा तथाविधं प्रेम वा तादृशः पतिश्च द्वयं कथम् अवाप्यते ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-इयेषेति ॥ सा पार्वती समाधिमेकाग्रतामास्थायावलम्ब्यतपोभिर्वक्ष्यमाणनियमैः करणभूतैरात्मनः स्वस्याबन्ध्यरुपतां सफलसौन्दर्यं कर्तुमियेषेच्छति स्म । तपसा शिवं वशीकर्तुमुद्युक्तेत्यर्थः । अन्यथा ततोऽन्यप्रकारेण कथं वा तद्‌द्वयमवाप्यते । किं तद्द्वयम् ? तथाभूता विधा प्राकारो यस्य तत्तथाविधं प्रेम स्नेहः येनार्धाङ्गहरा हरस्य भवेदिति भावः । तादृशः पतिश्च । यो मृत्युंजय इति भावः । द्वयमेव खलु क्त्रीणामपेक्षितं यद्भर्तृवाल्लभ्यं जीवद्भर्तृकत्वं चेति । तच्च तपश्चर्यैकसाध्यमिति निश्चिकायेत्यर्थः । अत्र मनुः- 'यद् दुष्करं यद् दुरापं यद् दुर्गं यच्च दुस्तरम् । तत्सर्व तपसा प्राप्यं तपो हि दुरतिक्रमम् ॥' इति ॥ 5.2 ॥
+इयेषेति ॥ सा पार्वती समाधिमेकाग्रतामास्थायावलम्ब्यतपोभिर्वक्ष्यमाणनियमैः करणभूतैरात्मनः स्वस्याबन्ध्यरूपतां सफलसौन्दर्यं कर्तुमियेषेच्छति स्म । तपसा शिवं वशीकर्तुमुद्युक्तेत्यर्थः । अन्यथा ततोऽन्यप्रकारेण कथं वा तद्‌द्वयमवाप्यते । किं तद्द्वयम् ? तथाभूता विधा प्राकारो यस्य तत्तथाविधं प्रेम स्नेहः येनार्धाङ्गहरा हरस्य भवेदिति भावः । तादृशः पतिश्च । यो मृत्युंजय इति भावः । द्वयमेव खलु क्त्रीणामपेक्षितं यद्भर्तृवाल्लभ्यं जीवद्भर्तृकत्वं चेति । तच्च तपश्चर्यैकसाध्यमिति निश्चिकायेत्यर्थः । अत्र मनुः- 'यद् दुष्करं यद् दुरापं यद् दुर्गं यच्च दुस्तरम् । तत्सर्व तपसा प्राप्यं तपो हि दुरतिक्रमम् ॥' इति ॥ 5.2 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
